--- a/理论物理/朗道/一、力学/第 2 章、守恒定律.md
+++ b/理论物理/朗道/一、力学/第 2 章、守恒定律.md
@@ -39,17 +39,28 @@ $$中消去 $t + t_0$，将 $2s - 1$ 个任意常数 $C_1, C_2, \cdots,  C_{2s-1
 
 ## 7、动量
 
-另一个守恒定律与空间的均匀性相关。
+另一个守恒定律与 *空间的均匀性* 相关。
 
 根据空间均匀性，封闭力学系统在空间中整体平移时，其性质保持不变。因此我们研究一个无穷小平移 $\boldsymbol{\varepsilon}$ ，并求拉格朗日函数保持不变的条件。
 
 平移就是将系统中所有质点移动相同的位移 $\boldsymbol{\varepsilon}$ 的变换，即径矢 $\boldsymbol{r}_a \to \boldsymbol{r}_a + \boldsymbol{\varepsilon}$。在速度不变时，坐标的无穷小的改变使拉格朗日函数产生的变化为$$\delta L = \sum_a \frac{\partial L}{\partial \boldsymbol{r}_a} \cdot \delta \boldsymbol{r}_a = \boldsymbol{\varepsilon} \cdot \sum_a \frac{\partial L}{\partial \boldsymbol{r}_a}$$其中求和是对系统中的所有质点进行的。对任意 $\boldsymbol{\varepsilon}$ 要求 $\delta L=0$ 等价于 $$\sum_a\frac{\partial L}{\partial \boldsymbol{r}_a}=0 \tag{7.1}$$根据拉格朗日方程（5.2）得$$\sum_{a}\frac{\mathrm{d}}{\mathrm{d}t}\frac{\partial L}{\partial\boldsymbol{v}_{a}}=\frac{\mathrm{d}}{\mathrm{d}t}\sum_{a}\frac{\partial L}{\partial\boldsymbol{v}_{a}}=0.$$于是我们可得结论：封闭力学系统的矢量$$\boldsymbol{P}=\sum_{a}\frac{\partial L}{\partial\boldsymbol{v}_{a}} \tag{7.2}$$在运动中保持不变。矢量 $\boldsymbol{P}$ 称为系统的*动量*。对拉格朗日函数（5.1） 求导可得用质点速度表示的动最：$$P=\sum_{a}m_{a}\boldsymbol{v}_{a}.\tag{7.3}$$动量的可加性是显然的，与能量不同之处在于，无论质点之间的相互作用是否可以忽略，系统的动量都等于各个质点的动量$$\boldsymbol{p}_a=m_a\boldsymbol{v}_a$$之和。
+
+> [!tip]
+> 即使质点之间的相互作用不能忽略，各种复杂的内力总是成对出现，大小相等，方向相反，这些内力对产生的冲量也是等大反向的，所以它们不会改变系统的总动量。然而，系统的总能量并非总是等于各个部分能量的简单相加。当系统内各部分之间存在相互作用时（比如引力、弹力），会引入相互作用能​（最常见的形式是势能，如重力势能、弹性势能）。这部分能量属于整个系统，不能单独归属于任何一个部分。
 
 只有在没有外场的情况下，动量矢量的三个分量都守恒，然而，在有外场的情况下，如果势能不显含某个笛卡儿坐标，则相应的该方向的动量分量守恒，显然，沿着这个不出现在势能中的坐标相应的坐标轴平移不会改变力学系统的性质，动量在该轴上投影守恒。例如，在方向沿着 $z$ 轴的均匀场中，沿着 $x$ 和 $y$ 轴的动量分量守恒。
 
 等式（7.1）的物理含义非常简单，导数 $\partial L/\partial\mathbf{r}_{a}=-\partial U/\partial\mathbf{r}_{a}$ 是作用在第 $a$ 个质点上的力 $\boldsymbol{F}_a$。等式（7.1）表明，作用在封闭系统的所有质点上的力之和等于零：$$\sum_{a}\boldsymbol{F}_{a}=0.\tag{7.4}$$特别地，当系统只由两个质点组成时，$\boldsymbol{F}_{1}+\boldsymbol{F}_{2}=0$，两个质点的相互作用力大小相等、方向相反。这就是著名的*作用与反作用互等定律（牛顿笫三定律）*。
 
 如果用广义坐标 $q_i$ 描述运动，则拉格朗日函数对广义速度的导数$$p_{i}=\frac{\partial L}{\partial\dot{q}_{i}} \tag{7.5}$$称为*广义动量*，而它对广义坐标的导数$$F_i=\frac{\partial L}{\partial q_i}\tag{7.6}$$称为*广义力*。采用上述符号，拉格朗日方程可以写成$$\dot{p}_i=F_i \tag{7.7}$$在笛卡儿坐标下广义动量就是矢量 $\boldsymbol{P}_a$ 的分量。一般情况下 $p_i$ 是广义速度 $\dot{q}_i$ 的线性齐次函数，不能化为质量与速度的积。
+
+> [!tip]
+> 例如一个质量为 $m$ 的小球，系在一根长度为 $l$ 的轻质刚性杆上，构成一个单摆。我们选择小球相对于竖直向下方向的夹角 $\theta$ 作为广义坐标来描述其位置。
+> *   单摆的动能 $T$ 可以表示为 $\frac{1}{2} m (l \dot{\theta})^2$。
+> *   如果以悬点为势能零点，其势能 $V$ 是 $-m g l \cos\theta$（这里主要关注动能部分，势能的具体形式不影响我们对动量的讨论）。
+> *   因此，系统的拉格朗日函数 $L = T - V = \frac{1}{2} m l^2 \dot{\theta}^2 + m g l \cos\theta$。
+> 
+> 现在，我们来看与广义坐标 $\theta$ 对应的广义动量 $p_\theta$：$$p_\theta = \frac{\partial L}{\partial \dot{\theta}} = m l^2 \dot{\theta}$$实际上 $ml^2$ 是转动惯量，不能化为质量与速度的积。
 
 
 **习题**   质量为 $m$ 的质点以速度 $\boldsymbol{v}_1$ 从一个势能为常数 $U_1$ 的半空间运动到另一个势能为常数 $U_2$ 的半空间，求质点运动方向的改变。
@@ -92,8 +103,32 @@ S=S^{\prime}+\mu\boldsymbol{V}\cdot\boldsymbol{R}^{\prime}+\frac{\mu V^{2}}{2}t,
 
 ## 9、角动量
 
+下面研究由 *空间各向同性* 得到的守恒定律。
 
-· 20 · 第二章守恒定律
+各向同性意味着封闭系统整体在空间中任意转动时，力学性质保持不变。因此，我们研究系统整体的无穷小转动并求出拉格朗日函数保持不变的条件。
+
+我们引入无穷小转动矢量 $\delta \boldsymbol{\varphi}$，其大小等于转角 $\delta \varphi$，方向沿着转动轴（转动方向与 $\delta \boldsymbol{\varphi}$ 的方向之间符合右手螺旋法则）。
+
+![[Pasted image 20251022111556.png|150]]
+
+我们首先研究，在系统转动时，从坐标原点（位于转动轴上）指向系统中任意质点的径矢的位移，径矢端点的线位移与转角的关系为（如图 5 所示）$$|\delta \boldsymbol{r}|=r \sin \theta \cdot \delta \varphi$$位移矢最的方向垂直过 $\boldsymbol{r}$ 和 $\delta \boldsymbol{\varphi}$ 的平面。显然有$$\delta \boldsymbol{r}=\delta \boldsymbol{\varphi} \times \boldsymbol{r}  \tag{9.1}$$在系统转动时不仅径矢的方向改变，而且所有质点的速度也改变，并且所有矢量的变化规律相同，所以速度相对固定坐标系的增量为$$
+\delta \boldsymbol{v} = \delta \boldsymbol{\varphi} \times \boldsymbol{v} \tag{9.2}
+$$
+将这些表达式代入转动时拉格朗日函数不变的条件$$\delta L=\sum_{a}\left(\frac{\partial L}{\partial\boldsymbol{r}_{a}}\cdot\delta\boldsymbol{r}_{a}+\frac{\partial L}{\partial\boldsymbol{v}_{a}}\cdot\delta\boldsymbol{v}_{a}\right)=0$$并做代换 $\frac{\partial L}{\partial \boldsymbol{v}_{a}} = \boldsymbol{p}_{a}, \quad \frac{\partial L}{\partial \boldsymbol{r}_{a}} = \dot{\boldsymbol{p}}_{a},$ 得$$\sum_{a}\left[\dot{\boldsymbol{p}}_{a}\cdot(\delta\boldsymbol{\varphi}\times\boldsymbol{r}_{a})+\boldsymbol{p}_{a}\cdot(\delta\boldsymbol{\varphi}\times\boldsymbol{v}_{a})\right]=0$$置换因子的次序并将 $\delta \boldsymbol{\varphi}$ 移到求和号之外，$$\delta \boldsymbol{\varphi} \cdot \sum_{a}\left(\boldsymbol{r}_{a} \times \dot{\boldsymbol{p}}_{a}+\boldsymbol{v}_{a} \times \boldsymbol{p}_{a}\right)=\delta \boldsymbol{\varphi} \cdot \frac{\mathrm{d}}{\mathrm{d} t} \sum_{a} \boldsymbol{r}_{a} \times \boldsymbol{p}_{a}=0 .$$
+
+由 $\delta \boldsymbol{\varphi}$ 的任意性可得$$\frac{\mathrm{d}}{\mathrm{d}t}\sum_a \boldsymbol{r}_a \times \boldsymbol{p}_a = 0,$$即在封闭力学系统运动过程中矢量$$\boldsymbol{M}=\sum_{a} \boldsymbol{r}_{a} \times \boldsymbol{p}_{a} \tag{9.3}$$保持不变，这个物理量称为系统的 *角动量*。类似于线动量，这个物理量不依赖于质点之间是否有相互作用，它的可加性是显然的。
+
+可加的运动积分就这些，就是说，任何封闭系统总共有 7 个这样的运动积分：能量、动量的三个分量和角动量的三个分量。
+
+既然在角动量的定义中出现了质点的径矢，它的取值通常就与坐标原点的选取有关，假定两个坐标原点相差矢量 $\boldsymbol{a}$，同一个点对这两个坐标原点的径矢分别为 $\boldsymbol{r}_{a}$ 和 $\boldsymbol{r}'_{a}$，则有关系式 $\boldsymbol{r}_{a} = \boldsymbol{r}'_{a} + \boldsymbol{a}$，因此有 $$\boldsymbol{M}=\sum_{a} \boldsymbol{r}_{a} \times \boldsymbol{p}_{a}=\sum_{a} \boldsymbol{r}_{a}^{\prime} \times \boldsymbol{p}_{a}+\boldsymbol{a} \times \sum_{a} \boldsymbol{p}_{a}$$即$$\boldsymbol{M}=\boldsymbol{M}^{\prime}+\boldsymbol{a} \times \boldsymbol{P}\tag{9.4}$$由此可知，只有在系统整体静止（即 $\boldsymbol{P}=0$) 时，其角动量不依赖于坐标原点的选择，角动量值的这种不确定性不会影响到角动量守恒定律，因为封闭系统的动量也守恒。
+
+我们来推导相对不同惯性参考系 $K$ 和 $K'$ 的角动量之间的关系。设参考系 $K'$ 相对 $K$ 的速度为 $\boldsymbol{V}$，假定它们的坐标原点在某给定时刻重合，那么质点相对两个参考系的径矢相同，速度满足关系式： $\boldsymbol{v}_{a}=\boldsymbol{v}'_{a} + \boldsymbol{V}$。于是有$$\boldsymbol{M}=\sum_{a} m_{a}\boldsymbol{r}_{a}\times\boldsymbol{v}_{a}=\sum_{a} m_{a}\boldsymbol{r}_{a}\times\boldsymbol{v}_{a}^{\prime}+\sum_{a} m_{a}\boldsymbol{r}_{a}\times\boldsymbol{V}.$$右端第一项是相对参考系 $k'$ 的角动量 $\boldsymbol{M}'$，在第二项中利用质心径矢公式 (8.3)，可得$$\boldsymbol{M}=\boldsymbol{M}^{\prime}+\mu\boldsymbol{R}\times\boldsymbol{V}\tag{9.5}$$这个公式给出了相对不同参考系的角动量之间的变换关系，与能量关系式 (8.1)和动量关系式 (8.5) 类似。
+
+如果系统整体相对参考系 $K'$ 静止，则 $\boldsymbol{V}$ 是系统质心的速度，而 $\mu \boldsymbol{V}$ 是系统相对于参考系 $K$ 的总动量 $\boldsymbol{P}$，进而有$$\boldsymbol{M}=\boldsymbol{M}^{\prime}+\boldsymbol{R}\times\boldsymbol{P}.\tag{9.6}$$就是说，力学系统的角动量由其相对静止的参考系中的“内禀角动量”和整体运
+
+
+
+
 动的角动量RXP 构成．
 虽然只有封闭系统的角动量（对任意坐标原点）三个分量都守恒，但是在一
 定限制下，这个守恒定律对千在外场中运动的系统也成立．从上面推导可以看
