--- a/Excalidraw/Drawing 2025-10-20 12.22.05.excalidraw.md
+++ b/Excalidraw/Drawing 2025-10-20 12.22.05.excalidraw.md
@@ -10,92 +10,100 @@ tags: [excalidraw]
 # Excalidraw Data
 
 ## Text Elements
-地球 ^2sz8tHSD
-
 ## Embedded Files
-8aa965cdb29b05a9073cdcda503dac924800c5ee: $$\boldsymbol{r}_1$$
+8e5a81040219197bb7ebe6a2ffcd7ba59730eb78: $$\vec{v}'$$
 
-df8994af358b62da04a646d932ef8ec446fd5435: $$\boldsymbol{r}_2$$
+02f43d7704ba76f7727484ff99a7936b5b072192: $$\vec{v}$$
 
-9ededfb6a8e736e806e786187b5bc9d267160fe6: $$\boldsymbol{r}_2 - \boldsymbol{r}_1$$
+044631063c589eca7dd107d28f95b68606a771d6: $$\theta$$
+
+1ded0e62975b00055057dff6b5f65c60614b3fcf: $$\vec{v}'-\vec{v}$$
+
+10ebbaa133f1db2780dfec8b721f105e692435fc: $$\frac{1}{2} \Delta v=v \sin\left( \frac{\Delta \theta}{2} \right)$$
 
 %%
 ## Drawing
 ```compressed-json
 N4KAkARALgngDgUwgLgAQQQDwMYEMA2AlgCYBOuA7hADTgQBuCpAzoQPYB2KqATLZMzYBXUtiRoIACyhQ4zZAHoFAc0JRJQgEYA6bGwC2CgF7N6hbEcK4OCtptbErHALRY8RMpWdx8Q1TdIEfARcZgRmBShcZQUebQBGADYEmjoghH0EDihmbgBtcDBQMBKIEm4MAAVcAEUAZkSYADUAOQBBACEWo2IAdgAtAGkAdTqAMwAWVJLIWEQK3FJSNip+
 
-UsxuZ3j4gE5tAAYeCYBWfZ2eHmPE/d6d3rXIGE34497tCfjeo4AOBom7s51B4QCgkdTcbb7bSJb47RINb69fb7RLbPiFSCSBCEZTSbjfCYJH48W6vb7fY4TIEYiDWZTBbj7YHMKDLADWCAAwmx8GxSBUAMQIfZ1eKi6alTS4bBs5TLIQcYjc3n8iSs6zMOCLLJQCWQMaEfD4ADKsAZEkEHj1EBZ7IQwzBkghzNZbA5ppg5vQlvKwPluI44VyaHiw
+UsxuZ3j4gE5tCd6ABh4JgA4d3vijq75CyBhN+IBWZJOeHh34w/On08O6taQCgkdTcL6nbR1U69U7xP7vCaHM69QFSBCEZTSbi9CYJOrxKE7Hh1S6nYmo6zKYLcQ6o5hQZYAawQAGE2Pg2KQKgBiBD/AnxaalTS4bCM5TLIQcYhsjlciQM6zMOCLLJQIWQMaEfD4ADKsGpEkEHg1EHpTIQwxBkjBdIZbGZ+pghvQxvKqMlmI44VyaHiqLYKuwagef
 
-LYWuwaieIeRwLlwjgAEliMHUHkALrAsbkTLJ7gcIRG4GERVYBYAFWt8sVgeYqeKM2g8HEvAxAF9mQgEMQIad4vtjnURfcaYwWOwuGheiPG2PWJwWpwxNw6jtTt8xbdi8wACLpKDd7hjAhhYGaYSKgCiwUy2VTBaLNKEcGIuAPPZDvVRh0Oq8SW5pIgODZfNC3wYFeRlQ80GPfBTxpOA2BLHJ8gxMAChmEomTQsB9jQzM0IwzDIWhWF4RhJEUTRB4
+sOtLuEAlwjgAEliL7UHkALqosbkTLx7gcIQ61GEaVYBYAFVNkul3uYieKM2g8HEvDuAF86QgEMQwU9Dl8nnV/ijI4wWOwuGgeIl/YOmKxOC1OGJuDtezxTnVewPa4RmAARdJQdvcMYEMKozTCaUAUWCmWyiZTqKEcGIuH3Hb9vQna6eO27hx2p1RIgOEZbNc3wQC2DFA80CPfAT0jOA2ALHJ8juMAChmEoI0wsBDjQ1M0IwzDwUhaFYXhE4kWhQE
 
-SmcAkiQmb4STXXpyUpOp8IxAjG3wUIoG5fR9DUd9KiQ7JQMfRsWUWKAOhLRwOGUCTwJpLJiDkxUSyUtAHxUqSolIKA2iWFYsVwD9UF04E1OM5YKDMizaRM1ZVPwc8KGg1BYLCQoO0KBtIHKCRhgAGTqAAxZxKkvOphmOAApb4mg6OoYAACQAfTGCgAFVrTmFsIGzLtPBcxsNjQLZPm0c4JmuJiSUuRIdmBaNUC2V4apOHhkQJD5bhOYFQWIcE0EJ
+SmcHE8QJc5iVJYl8LuAja3wUIoDZfR9DUV9KiQ7JQLzSN6UWKAOgLRwOGUUTwMjLJiGk6UC3ktAczE2sJNIKA2iWFZJBCN9UC0xTa2UgzlgoYzcFMiBFhs00gjPChoNQWCwkKFtChrSBygkYYABk6gAMWcSoLzqYYngAKVOJoOjqGAAAkAH0xgoABVU05gbCB0zbTxVkjDY0C2K5tCJCZEm+d5eh4F4dlRUNUC2J5emqiYnh4cNTgmCYrh2HrUWB
 
-ft9ipM4eHiCkeB2OpqUbLEcTxMbtHmiZ9jFf5eiuHh/yW0o6S9bD9LtZU+UFYVRXFM9pVlaslR5K61XIDhNW1cSs0NE0zUKn0exdO0HRGp0Q2Bt0EA9L0bR5X0aX9SRa1TUMaXDaUowhWMaXjZ9k1TDMsxzBA8x0sDi1LCr0FwJoqwvYgUeUztPN6eITgJIc0dnJh50nVBjm50o5wnRcOGXEMkgmuppxamlCF3fdPO8hAzwZ68Mh1e8KafF8308z
+YhQTQXEviRPsiThXqdjqAFI2MjEsSm7QPkRAkJguF5x16Fba0pF1sNKc0HVZdlOR5Pl8XxU0RTFaMpRlG75XQRUOGVVURLTbU9QNAq3Q7O0LStCabT9cGrqdF0zXZd1I09SRK0TSda0DUUQzBcNUVeuME3yDjSnTXBM1M8z80Lcr0FwJoy3PYh0YU1sPMuHqBr7THSiHGdR1QJ5ecgfmRznDgFz9JIZpJXoWsjLdd2CV9D2PBBT2Zq8MjVO9ScgR
 
-5vx6y5/nhCCSxA8nJNKSCOQslXgUQ5DCcInCzswvDMO4mYiJmd2ZmcKEZb/eFVypBadhefCaN9rCiT2tiXm+fZER+b4aLAQPtAJEUjgaEktoOz5o9dzDcO0UV/zZxi9suF4dgHDOtmheEBxFM5ThhKkJhLzDY/L64C9eCYkThKljib+IarJHgZenFF/mOHYe69mO3e0Xpx8Wm5GIpBojoDuJdh2ZPj//Q4esSXufZwqftiHHYT/7RaxTqQacOcOI
+9n1V98J2OY4nj2xJjtKICQM0sCIKg0yvI1hDhJQtAiJKL2sJo3D8Jon3cL95xDkhI6dkSK26hGmOY+eAPCLQ3CEh4XpflOYXfm+RqzgA5PQ+0Ab/hOBo08RccrkTzCg7D/FEl6TnoV6rOfyeEP4m0KO+y7Oau0SbmJmrmZa6744cU6g4/0SCY1w76rOrJOWjhnpcRuH73k7DnE12Ww4cVOTOGmtmZnDiXZ/27HZI6Od5DkSDf0OTzvtjm/8vmWgk
 
-89uZOGnI2fBzXxKP3KexwDqJESJcCkbNX6Uibl/KkP8RQQPznUQBq9S7ES6nVI4cJ1wj32vAjaiCT7IP/mgjiGC+44SPhMA6Nx2Yj0RHcNBRDv6kL/qg9BMxvbAJoe8BunxjjfEHhAhu6Iy6f2ITLDhKDIEUKAehfhSIxRXApLsU4dQLgTDYSQ3+ciAGUJ4WvMudQDhbXiAdNBy86F1WnLomR+jyHcJKLwpRpj3j/B4LCQcKd5qTQpA4pBnD5EuL
+6lGgu4lL+W/gNCtokYkvZH5B07r1KOIDfidVfmuCYIc/6zwAf8buIDd7gOft1WqJxI5dgGunEBSCtooMvkAsumDML6yfjhc+Exxz73iINGE8sjrt1/qQkk5D0GgLqFguh+wfxXF+HVcciQfy3BwmfLhqCKEYLAdQwOyc4jXDXAPYWS4S4nBIf/HhwC+ECMwnUbQSJuzjjXCNBhtVG66LIYA3hVCZg0KDiYwaRIfh9jJD+M4HDpHIO4Q4gxTiSguO
 
-AG4/uZjhGWOnIkTuopdhv0njVSBFxFobgHL8W4RjXEmMwmYjcbFIEQJJKcCRmFm5wguLPOoGThEyJyeEvJMxxrIimucWaYCFoH1olPKpaTan9nqdkxR/dWmTQfjNOa3Tkm3BRLUpig4XiQMFqMnC4z2lTK6YtZJMIF6p0pMnOqcS1llw2ZMzp80dkf1AZ8ERi1pxfBOGAxpET1kJDaRc6Z1zJFTy2m/XoDRAVkXbscU5mFznTUuTMm5G1tpnFmoI
+TiY348Q04fn7viXY3956R3eMSKEPZVzy34UopOOETHkUziAqOacuxSMwlsaqID3jLVhIcX43DMnOOUThaa4ZZ5/h4AtD4y1EkVJSdU2pGSjEzGabNNpHSlon1op3eW98oRkl7M8GB8RBklGGa0+amdOkTLAGUge99kRNTOEiKOTxllgFWXNdpGzxnz2FjCaOjdc5PF6vU0JjTMLnNGVcrpBdO6Im/kdBuhI6o91OR89Zi1vnSM7n1L4nxzhXyWkt
 
-x+q4tHgpaR8iZULvk9MzlCE+xxBaWOXmA+hdw0UlEhR07FTcoRLzDnE1c/Y1xrnJWASlWyrk4qzhMGuS9riAsaiPG4rL2XQp+RUqE/jg73KuHVZlvQRUYs2WKrlUJeq3HODcE+MJVx3BXsYzB6KJrKupevMU8JERfBkQSlOirjVfO2TiqEW1I7wk+GKERwiU4KqoTfDxX4kiog+FSfliJEgZ2dQit1bNalxOToiVlUSbFfhwaiMUeCI3vCjaKGNn
+HgoKEgtIuWMyFpSw7/iedsbavVGEXBRTNNZlyIVbMLt+GOtVeyfD/N+E5WSa7JzBWSzZIcw6DWbpHfedQ04nCOL0YlaLPnko5VtH8JIoRWxeLVNeQqmUjxZaikZ4L2UFzDv1eWRJ97/gHjHC4Q9FWbyaSq0lGKtlhwJFbaEjVuFPO+MK1VbLrlb32H+JI+JLjSuztCU5JiPxJAnENWedVWGJD9pyj1VsriMUSL6hVDTsnGO0N+FhM8Cmv3wZG91n
 
-r40+oNdQjx7MxSfDrv41iZt15xMfltJegiUT/jBb6vhZc4isQWoxBas1ZqDIzlPZEe1ASMJ8XCVlfTRR0NREsyaBLRT9oSIxeaEC6Ekjmvq3JhqShT3jbPJ5ljYTEgXQdJEFI1zwsmnEgtm6i1YNqcI2urxzhHB3gumEpxGJaOXsCz146DiAs0TLcOjbfgLo3EiP4XivwinZn+m4aCRRAdXCBnFcQ24zUpNcc4iQqTfDgwBxDm9kMQNA7faEJwTi
+wY3etOPGv4frjW0JTcwgUjVhYfH3oWy1XdvwjRqdfX8Ud06nNUecb+Xa4RwlSX7Tu4Z05/nxFyteD9S0QOqqOyu8ykRPPxAOhIZwPhRwYWnDZRqk3Mpwp3YtzEThRKYiupdh1vgMt/EczqpzO5Ql+OnJq8sET70QdgjRVE+UjSOofeNN7THsP+CSWeP4o6riXbCI4DR3Fp2Bcwv9vLe5AZjvffVfs4g1OOM8WqbSZ5QngwB5aO8QOobfT1HqcIlq
 
-IooVonqrzmnbv/Qhh5wGSM4qnvIk4tSAMlLfvhpjSGG6sYXaKQ59dC63Cji29xWD4OAaI4JnVC6ziP2RI/X4gsd5XykyAxjcmWOKfXpHQlX4hyQI3GWv9/Ypool/Dygl7NM1Ge2CZlE3jnM8D/f8dmV7BwppTucJTBHmPEZ1X+yts9n1imqQOIWMw77Puww1SxqJWVocwy8Bekd8XpzI2/SBrEmK7HAx8Dz2n+EDjqhlnDWWKQ5bLn85qdjAUyKR
+9j5X1F5YAwm7v/WuQDRGUNgbfcSHqUJ2GFO/vhpjhHgOsa2berDsI03j0+Iy7dSqGMIeY4J0DwnTHXx/H+f8a4vg4gndJk1xFGOIZY4pnNkntgfj7CA2ENw/1fFaffY438erC1fThbFzxTNW3viuUzyLJ3YL2sw+N6cSQz2+ESJdcmBPIcU3+u5xIiTtOo31YWS7djvCJAPd4USJwdtMRbCc/d/M4vzgx7+ICYRkl2BBoaPmdNlpmOhvLzw9mfCK
 
-HVVLFc9qVuWbh2pC65kWsWSJtRdGt1gDiDLMk06cO1N62R/rCzLhDdC17LijtAh1hEOEfIvCbSEH0IWfWlR1vME29wVkQhVaAT4gJISMhuyiWQqhTC43OsiO6zNurcWN6CYW0sgly3XG+TWAFMojkADy5Yaich2GD/oGVMCJh2BQcKRhMD9BCgADQAOKYBaPlZsFRirdnIGVdYmw9ilp6iiViFDDgTxpG1T+q4N7bAJP2VE1xtoHxBI6Fc2dD3/A
+0uuVNijrcKOLVHLJJF75dw6uYrenpk2rmfiJ5+revpzuQs2eQ2l2jdmU1CbLxVxsR0xAOAgQqwiHCCTOkhB9C5hfAgSoO3mB7e4AyIQrtOLcV4vxGQ7YhLIQUj5NY/kygOQAPLFhqCyHYP3+jpUwLGHYFAwpGEwP0YKAANAA4pgFoeV6wVCKu2cgpVax0y2GHLsNSTiIkPu0xufjShtTPn2aqjcrjBuw/LZzpRxqTVQLk4918eYSOreTyAa1MTqj
 
-WttZqgtLjAhWriXUaBjgby/HsiZi1H4AUbCdFs/sbSug5JdVU6AhQwbujSKUMo8aKm1xUdUH0tSBG+jSA0RoYYA3hkDGktooag1GqgWLGu7QO4qIDemfhkZBmdOjCMWMYzq7xkmFM23ia4FzBZKy8sqYLGGAHmswerZ6VKGETyM00GAtmjOYWvMJzcCpMCEWC4lwtkRfNE+I9i+BUVsEd8R4TyXcbOeBUxANa3hQln4Ez5Xxt8/EbOnvxk7m2Asz
+QE8bQjdQNouWtfeWFI5JnVhsyWUt0JC8n5I9U8opxTlnenKCo31fqBH+pGLUOp4YgyRmDcS9pmSQ1ZyLM0luEAm4qKDJmfg0Y+ltJGbGwZYB43OpAQm8Y9ZpgzAgLM9ttKlBkkWCQuBhgu4rO78PFkLrFW4Alzq+JqJTmHJwMEfLURi1nPOBsWWlyZyRLbpWe4PIu01m9bWN4PZJn1hAQ2p3TJ04JE8w+ZJjiAQLHbMyDtIwcidmrOCd3SiIWQne
 
-QCbAoL2w747MSA+0yjf9lhVlG/cXZ3+XnfLhdUTXqaev5JG4rFdzAUxNNG6T+3r9kQm4Fwdrxs7RuLfbDPhbUmslhO80P8fxxB6b/jaJswDhb4bQ6oJzjx3CjxN60RAGEZ2KgFDIQHf77xwiK74p1RELAFfBHBgHNqFp+oezaAEqIi7QMKQJ1rwGZyIHMYgEEGoFlZlx4r/iRzeKsSHLarhqAHZzeLEpAp7QNwjwjb34MYIb/gEiXB3CCyojlKHz
+ZNMw/dYVOQv7ZYdi58tDeXY4E5E2vLn77H5RcssNAGr1MkE44O+ZcyQ/emXu2he7Usy/mFl8yNJ4iCvh1fgfCXyQgzNiESXA1JL5bT6rpzczfiNx/gbilJxB/4NwAE9jAHv7HyRwS44q1S/7ybwECqIFP7z6pr3p7SCpJCUSdSYECbYEHC4G1ajw3yfArgwgWznCFoRqcJkjnCcYNzpw+JHR/pMYNwDRNT7QywlKnxxDsEjS9hcHfhIi8F4ElBTJ
 
-8GwicZVxLyTSAphaHA4b/gUYEJnC8GSJmIvCUbXDwgkhnDKF/rkhEbbSlqtb/hNxGGUhyHzLmEnzLztbHynyPznwXBVqGEJDOFJCuGjyWEsHPbvDeLRJbQwGmY6IfxOEmEhEWEeHhEzBxAjzNTzxLoiLNRywBEpwlYRYLQppkppElAZFfiwEBLeJiL5EVJxCWpvz9jbAwjVYQLtaZHVE5F1G4EsQoJXD9giJbRabEGtoRFgHLIDjIpszUFEL5wPp
+b42JkYHBdiRwhwmJYbCx1RWxpx/gcF/qHw7zdiVpHLQGnyaEWzaEzJ6H/jrzyFgDnzXx/AXwNzHAWIaEJBWFJA2FHB2Fbq747qYRxAMKZywiIizxUp7KeFaE+G6F+EGEOEhEfgXDdbsFRzXyeHfDVZxZLQfhEE5YHASKQErosGZFsGNzfxfDbADyrxRyFEpElHpESIKz+KppLgfgyqmyFqIjaaBEybBEi7VEvDNp5EkFM5iGQgwLQgOZcxXA750Z
 
-vx2bgbH5vJtrfZAZ7zRKzTbTJLIo/hYbbQXADijE3okHpEbGbxbHmanzJIHQHT3KVYMJ07tbZJXGDjbG3EfxQg5xaIhoFxaHFzlFjaXGMQfE3G7HfEHBwgSacEUhdq5GvElFgloIQmxZxxcZJCCyCwfBrgyx4bAlxAQIc7IhU7txfgLpf6NbgKzywhcztb2bzyVxUn3wLqnCCYfBZFzyWJiHnEVEbRXA+EEhvbVaDgLrdpTovCiiTSmy8njEXFNR
+vL1Yi55G+JriWYuGJJLRmx1TCJ3wvA5YZIHy9iRJwjdjzzjjjh1q1SaZfBNSHGrFHynGbEapFx/KlxlYVzb4PFAZPEbHnGvHTzyxHqMFnB6p9GLF76OErG/EnH/EixYSkSXDxpuZDRLgkinA5bQI+Fmzhh9gfgpZaYjTiLEhdrdg5a4qQH1xXA3EEhLpqF7JJAXByxRK0b0aDFNQtEDxnATiry9hLpLTMKzr4hIiWxslLElB/zNSRwDSFpJB7T8k
 
-CmMQc6LyoYHAyzC44bKGhLtY3AQJiiFHkgi6fYXFdHZFMS5F0J/rnBIgHSUiRzbCvzokgmpJJCrjJwoiwg7B/rskLxJAsLTg8kZxEnP7wikKemPw+mkntFCIWEGERGulhkekwiRnAl3zeqknzItYOb8KJnunIgpnenAl4qUjVyNpqK/HBnQihn5kRlFljHSZ+xkFaJoI9S/A9THzLxVl5nhmFkQHGyDI07NQoJfD1EXE9nJlemspZxWJ3DyJwg/7
+qKmIkjdhrocEKI5b7xRwEjZE/pl5ob7CNFpErhro1b9G6YzCdxEi3zxr+bbBfwInQkVKeqXz3znA7B/oMkzxMlHS07khKnOlWyukDzXyenhjjiWwiL6GsGCKBkxx/BumhkOEvw5zhkzJdbMIGlxnBnunAFLhUG9HxoDxr5ZmZZBkJkhkekOH458prh9SrgwoqYTGSldxlnxnhiVnAF9SklXCrgSLdyNStGDHZkVm5kOGFwWIXAYI8pDQfhIilntL
 
-QbxHrETkFlTnAlZy1IkhxKlmSmbz+EJk1m9nrkNn9xZzUFEZfhIihw4bLmHkzRJlrmpmnlQkkaAqkJ5GbydzdlHmTnPlnHym9LQk2rprjyBk5krm/lPn1kAWNlAUdx9hhwF4wJ3njlQV1mcRjEQBwDHabaEw7asD7a8QHhHZBinZoDnad42zXYGC3YiQr5PYBwDpriIXLzIXbCoUunoV9k8JA7+TyyORsDxCXgABKO4HQYO2wmAgsbAxw/QHQHQn
+lkdljk0GvFQgwZPIHAMLb61RbJxAjnLlJmrnSJhwgJbnBYrzLQzzNlOltk5lHnml1a0SnkDwRx/AtETz3wLkumjkPmQlBGnyDpLhdgEixydSXCZkBl3m/lVnHmlJAUOqgWRG06QWxnQWHmwWhLsSojbY+h7ZB7iRHYnb7jnZ4WBDXakC3aAQPYGBPaCTuzvYlC+QlBfaBToBsDxAXgABK24HQP22wmAwsbATw/QHQHQLI8QcUcAqO8wEgGOJUpod
 
-I8Q8UcA+O8wEgROpU1o1MM0Ainy2ww8SQ3irUzwooCQtSHwMsPJEC9OjYw0HuZiA404BBe0nJCK4u2Iku5eNUbMBK5amGY8wIqujIkMWuL0OuEAeut08Q1oRuj0DMZub0GoVuOo1oduf0nojuVooV9ovOEMLumu0M/0fuTuAeAYmenuYYYesA2Mke8o0e+FceCes+jY8kZYEguAGO6ejMFVSeUkJUvYDKbMkcTeDApenA3AECle41HAYsEsqAzU+
+MXwXcCCK4mcT69Bw29wjwDcY8haO86+6SY01o3AJiNSjcAq6cQ0uxtu/OG0qAuIFwzwLcUSeWkcExjkMuDYfuduFoCun0EAyuD0goauL0mu/lOu5AP0Ko+u6oAMxuwMTuZupol0VuJlMMFuFojuRoyVHowgXoieqAtuXuuMYYPlAexMnsLe5MlMbMistMCwcO8eLMhV1M4kqefoLw64uwVwBe04I4YIK4fVOeHAEsUsRVZc3wNS2w+YO41ezs6sd
 
-hG4B5zee4reysS+hu6sN4WsLVpQw++sFkhs/Yxs75a40+lslkOsPE8+ds7ecEVFkATsd4jFgFuEEaEBlcgZvKdcF8SmMGZwYBpshsn1SQ31iIYCGmFwfW56FlVy/m5IcpcF5cX11cENv10NZGc0NSbmaSxxqx9GO+6qj8PUP8OqSunFIJVwJxa4RwUsDyRBsFZ5Qc9etpj8pwg4kCSQVZj8nwQ4vlOJcIkmL5kizqAxycNSqmJIGcZiD5kIgsI1t
+el414usB2kYbexsRVgaX4da5c/ewEdVnEkEzIC1E+OF7ss+AF++LmwB9ctOyILl7h4W/IUBNmkcdOt1SQ91zcTUdxohChKxvcgh2xzB621ZkIX1TcD6wsT12CGyKSXmlSd8Cx7Jp8mqOc18fUAC+qkuN5sBdUzUvU1lX87a45dcHwFwxw18XYUhi5Bp18Vw+JzlzC71Umj5QchctUMq8Ie8bS5hJQJii52w01nwjBmcpyhcIC/wg0nq+84YkSfsb
 
-WjNd+fJO+kCIoPKbpNwyI0SMt7wfU9y+WX4m0BJItFSA6OGrWga/ybEChJQZiJROGBKm8+hDcytax5t7wb8bh20BIdwj8Y5FK0J1w0VXBa4Yo05fy+0KZUySQXpJpQdc81wS8gKiCDQMFKtb1Ui20fYIiAhEmAW7ycSIoG4dCJ1fUpWZtih7M9C1cTCEmDhRdbF04dU+hTB05X8HSC0eyVwQGLwGchI5wImbRb24d7thNUi80M03dycvdm8/d7yd
+iA0PJZcou20mJ45g6M83WQafyh8vUit06+RTyOI08bcEtvy38th3YA0FwKmfsuI08KuvZDKBIFt+wB0IZlySQ7pWlKy4cc5EB38UqEiEt6GTWcIFmdtqWDtDa/w4R7SxwytZp/5AxkxQpYazCBw0Iea/NZyXcscjc2GSSVBYdEq7SS0uyLwQGzwsdRIE2tRcpS4Cc45f880ldfw1dOItdyqTlTyv1By/ZARqdFptEbdFdx+NSVs3dvO/tDcXBPie
 
-wLwkNliAVOGHdG0XdCIJxfdtlEK0IV5cyPKJ85IjEG9U9iSPd8I89e96KM0k099D5zCrE59W9V9u9ettwRwwiOGs87Mztr90929c9Hwt99t0Ia4ECAGdmS949o2k9b9s919oDetRwi1LdMadNEdG5ndQD79N9PNiIL8jpYC9cBIgDl9SDH9yiAafYRWg5ptTNfBF9M9O9BD/C1NgpYCnJr8e0kd2c/SC0M0LwgKNwVZnDIudNqIDN/DFBf9XMuwu
+0PeZwZdHwE9Vd09Q0s9+didDCdxPtbCGtcFkxa98SG9Nd29AaNUoiDCo6Jtq97dk9XdW9ht3ObaCCPUfdD969ndm9PdOSpCEi+8OI3qh6btrd5dZ9v9F99NMxcS2wvUzw/4w9qNY9kDHdU9MDSpouEdlWqSMI39UDmDM9BpIxhNh6n4fW7t5wFSSKCDR0+8pDBN3OFDJNbNI9T52ye6OIxIOp2wkqWNBp5cDKEZMh98SQ7twatpxynUkhjpf8E8S
 
-cYj/CQ8tNTtDcVEpxmdyNzcQacSxyztxKzpX8X5ajJwGjHO/DohIizWssl68ZCppjYC6jBZSQ/DImjEYmhwEmYDIJqjzj5jrjWjHtAcPx3auw34+pO8xjG0TjB0gTmj05UIb5+Zn5JwKIVZ/j8TahiTG5Qcb86dDcb8J8rEGGVZqJReLtdUBCBN8DUITKKmym6mSckC4jgsTJUsX5lIt+ITGJYNaNj6J1dtLpq4xtf4D90jEBzhNqPis0M0JwtBj
+4ojqmvJ7tBw0qnWjcPiUcQjijUCn9HZEjmtENTBSDFcwJ29Cjn9+jYjqjZNRcgpuwps2pL68jW0ejyjhjEJqDK+Xcr57ZH5PUX5SpwjSjM8tjRjx9z5kIwdLR0t/4MI7SljkIkStqER2t169jsKLaamq4Wcha/10JlJkGMsE8FsKDEpKcd1UNj17wWZMcH4cWdU254DUTKcVhDqPwcI7SPUed4hGiQ0Di18RZ3jlT288ac6I0Gy38S09N38cJwCQ
 
-R76Hw+iPhVwwThNUIX4c6TKYJs8/wapna4J5Eg6/+xZG8O50py8c0xTOKRhCzcdflbOi8EB2zM61zLyBzetmGKcKcs05NI8rzlzuzNzXzOEUS5EX9eWrwrwIoQLOzZweztz3zkLQ9dUMLEGmFAF2FuF62seLue2B2JFuLLYlFEENFgkwk92DFaAscWzwLiLoLC0NEELQKaLPmmLvFJQfkJQIOQU6APAzARg3wUAaUxoO4alhUB4mAuowI1MWwW00
+63+4NMSkzviHGsz4Sy6cCGip+IaS4wBqzIpUzzye0WyES2Gxakdq4X6hzEzxz6zMz5zqawCT6pWnUnU/wdzC6sKjzZzht1dDc9dNKM2Xz1C2FCEF2+Fa1OkRFXEJFUL5FaAN2k+kAXE9Ij2AkL2DFSeH2fkisDkcApw2AUAAAVoQCYBwL0JIAjkYBeBwCyKQAAJo1A7AdAyUFROQrCKWPDKWfAuk3GQFDWRiU4LL7BnMII9EV0eUs7QxFV9Spr4h
 
-Ir8EChwliVISSDOzwI8u+Vlg6g4FwdwQ0eVqAW0Hlq0UuvAt9tIikp0OViVuu8QCAjrjrsVD0Juz0Ko5u70n01usrtuv0vuFopVOV7u4MlVBVPuxVQb2ViMwg5VdYIejYGMkYNVEecY9VBM+LjY2Y8epMie11pQbV1MtIAAmt1UzIPi7gNWgMvHTdhqNVXvzGLqODNXNS2HEnurqqNQrGtQgKPl5JtV3ttZrC9bS2hAFIW45HAN8NgFAAAFaEAmA
+NSNqAYK2rTogC6LjVQsEwKPV9nS5UjeVy7XTa5K67CXDYA8BPTq6vTSgRUKhRV65qimhG5AzOim4mjGvW5yu26pUO6JU5Wesoz5Vu5Vge5YxBilVFX4yRgVUEW1g1Wh5UzD6bgNUx79DNWsxoD+SzBo5jjNjswd5KPTL4nDUCxghwhlvizF7cCzxlmBazXKwICbW16Rhnj14rW3gwulAbUeSd47Xd6DT7WD5tVHVj4wSLVuwz6oRXXBxbw3oKvzL
 
-cC9CSBY5GCXgcCcikAls1A7AdB6ilAFQLDOQQBoRtira6wj4GwBo/hDjdRe5ASXV9U2y3UbUPXAjSsWsQCAAM6oAMAuVYlA5YWAX7f7aVnAUAxoi7LYPUWY4H4U8ehobUVrn7bQRAyg/MEAwQYwfrPMhk5gBAqHOIGHUA4Y1oeg2QuAJYTAZMV11skAfIOIJYBAQHMrFQoHQVQgJHIl4QUHZ2pAF20+CAaUnla0nuApfFvLAlFQ07s7C7S7K7a7G
+KstrLRqvSJ7Dgm6u/XfANAbbmkQDos8S0VYvECvYiRJ52iSSqSyQaRD4R6QDKTXvqSHUXRRB6TWRGQmQvsPvSgfu2Rfsx6GTY6lCuQrA17qx4ssUEsVCkAdCpTFiDB1Bw5CCSAsgTCUD6CVBwBhTbhcWxgo6oj5QLBAc8toBdRLTVKdFgE1IxytQ6XC5IoWwNCzTv5aUQCyudjLrhgJMNz+Y1IeV2WC6oAThdz7OyMRxnAeWnRGuZVXT2voDcjxA
 
-7W7O7e7krx7dk2lzw/YNUrR9KnwtpJpEAjOyyni3Shyv9uwqFPOYMEIQ47wcaaiPUllzLNIEuonJIG8ViEyK6SxFJNIwVaA6uruYVnrEgAouwbM2APArrxuT09r0A3rKVNu2bAbUb3owbEbbuxrXuwXRVmVJVMbjYSMFb4bSb1VbUE06bCYmbtLO2ObzVlbrVKeHV/Q5bFVE7TY6lrYMwPLOe1bnutNcy/N0144E1aAU1Lbo3s1NeEIQjw1EN24v
+IBKdKfWthXMzyfQCOsxXOvxVusIzO5evpVFXGvZWui5XBuu5ZuoA+UlU+5lUEyShEzxtkwh5h53vJ4BRpv0y4CZutUpsp59stZQiZ684MD9W55oB9gnzhcjVjUl5xJb7+mbhzUqzgdnVttaydtN73jrVPjt5gjbXV0MJObDvfsHvHXpfwS1jT5duexQnL54Sa3C7MLcfQi8d0oWwhwifekKlsLUoDR7sj0Hs0V8QntntCejuvtXsyTPsXtKTShPt
 
-b/bDsW1Pefeu1jX+1es/bx1P42JrqF1e1kAtsb78EjYz1q+sc/c2+nsVd26dn6LFIMITn6aqGbwXwrcIa02PKX4WLmdmHFLdF1Lj2m3AgBksk8kWk3AHX6Q/eNHEAgrwror4rB7RU8+QgqYUiu6WWOa/is0NEEAyguAqlaA3w0IJxJskI7h16vXkAakGkCk2ktH2eYPMktkpkIQ+bdHGAio7P9knP6nKw1oQQ7kp3CAEnRQUnEgpAHQaU5YgwdQG
+yTle6T6RAd2TJv3sYC/vrcAf0wkeoigfuSnXeRMWfbQcSBNDxAcCHCZAwBPAcsVBHbRBICoi45WyicxxMdkg8M6MiubC8PlIfA2bwJprGVQxp4xeCdggxmlDSc0jGuafcjhgo+HBqca4acfSRVKg6cG4JuAxmdSCigaDkVGcQ8ZU6T26E+GeWcFVhsU+lB2dtQzR5VvTWdTcCAdWoCHyDSw+iwReCwHBVtF6Swl7wH101IPj5ebX9tPL10MqNvzX
 
-OQgkgnIEwlA+glQcA4UO4IliYeOH7BOHVJ7crmwyQ04XMVyBWhWXujOf91ZnNh6Za80RrNnaAHnSGDQl6VSyjy0InFrdwNUMJ2S/w/mcC/nNraudr4VgozrTrSA90sXCV0fSVluX0OHpQ6Vgb6XhXOehVobibufkb+X0bCMRXcbQeCb+VZXmMqbnuOMjYUeNXaYdXJMNHz7gUzXNMuAbXlfqAHXR7bv7YLMFkwj/pZaVrjb+IChY1U3bbEIA0GGC
+j7VelBxvduQDtvLU6x1fN5lfzdjsnXK+ouFRuebeeeFTahJsVCnAIBPC4DVIVw9UXCaCaC9AICaAICJC4A8BjBjDYB9AihB2HDu8wgpXuANg+wImP77tR50yOSaAQCQdFAXdfRhQtDZTxDBQ6iPcSDPfKCvdlSbCDT7AabzIEjtIVp0cVTPBdSjo9x7JFlNTg827mFojrRCdJAGuy6yfy5Y9K6o/hjo+2ta6K5fTad/RxWG4E8BvoCSDE9XZk826
 
-38sLefbYvasa3O1o7zPQ+23174+oo5+D7FsR3mHr7i+77CEK+Ls4h71bsqWbwHv1wcq6ttBAfPhssxTofPTF7PEgPVLxAD2cSKDw1wyQGeUPYAfT0h6KQT+0kQyHzwcgn8bIzkBAUbw07WQ3IKwMXhLz5aOQYAxoGAPQCaDxRWOBvLrmUH0DRB4+NIeVntFiZl0acRyJiGOSM6bA90gRHlJwUbQCEXeDlI+CKF8SYYnukcM1l5RDB7BUQ5II4Gki
+mcz+IxBu1iozWfFWRv2fRs+Wa7s8Bec99s/BDn88jWmVseF6jU1thh5rK0XBS9Gx9tFdUrKsxdV5pcnfG9q9VVLXEAN6rVf+I+AfOV1HyG8J2GXBNqb3K5G4reEgY4JMDqB9BusIoD8GMAsoHwJgvva+LgAySJBNATwTQDflSxh8CAEfNCFHwhaptiA0eemNgET5nd8Wm4ByHyiEBNAjAkgH7JP1rBEdc++gF7qR3agXBuoXYUBqbD6geVRWR0Me
 
-1RpIgqEfEKplxC6vRdcyIVQfsBi7xUe88XC3D61So/R7caXKQNKA0CBBrQuXfPlX0L5Qws+cMHPpAGK4VUvcybcPHX3VxPQSu7fG0P1z1Tc5J+IYZqCNz5hz83e1OZyuzR35XsjqN7WjM1m2CLclY5/M7qUEb4x5au6/K8Jv0u47ZH2J/E7okMepFRW+XPFnkVENB5sKg3wXALgDwTYBiAmgeaJoAHDVD4MtQ2obgE0SvhsAtUD0tgGOBdgzB7gF
+CuFXZy1kMrfDju+FRDQ8/QMXeHmgB8p+skeA/NHqFQx5vRNOuuXHtwLJjT93WFQOftgBJ4F9KeEMYzr6yp4r8ae6/ENpvwDDb9meMbVwWz385bcwgHMSVKf1i7lsyOtuK/vF24C2lvwu0MLr2w7wv8lwwCYIR/2bZVdv+TnQPOrwgCa9/+2XFzmixAH68bYlXL/sHgphwCPO8VSoRAFFIxoZk2AX4DsAQB4BegxAYgJpmIArgxgS4TQLUXvi4DLg
 
-sLHHRLxAf+hbTvrSE0CntuWwOKXugDuAtBiAFATAG0G+BqcJAe2SgZp0qinBSIXGVzASlIbT9jOZlAkE8llL2kvc9lMNotBqiLIg0wRd0jhhEHud6WbMNsgyleBZE5B9ISPooK5DJ8VBag9QQn00Gm5ARCXZKmnzSqpdi+6ASQMYNOwhtsuOVGwf7j9Dl8SuTg8rrVQxE94PBBbAQP1zsyApAhZeKcA21bYzd/BnGNmOZgiGHV5++/SiOdWX5Lc1
+xARIKQJdCR8aI0fYbrHwWAdgk+rFByFAAvCJBCALQZtgn0I55t0AefWwesDBAi4LYjUKtOVhSQNwq+7Ud4BCEOEyohSMIVys3zlYYF1W7fQrl3xk52C5OffBTroKH7hVPhWnHHhPxdbmCEYVgmwSlXtzetw2r7LKs4Is4+C6eGMDwTjB34s9LOCeenlUPaoeRZ4UGYXoLFa54jIh0sYWASCOB/hH+BXE2F3i6JTlFen/I3o5xjBZCgBtYXIQAJ16
 
-+uMDNqkOb7pDe8mQxqoBGP7AC8h91JIfqCKEn87c5QiQMQDGBek1eYwVEpoEgSvhJouAbQsQCEYIA5RCAbADykSBjBiA7EY4AMIIBDC0IIwsYR32IDtUaY2AaYWAF644CKgMvewPgCaD2R1h6ATYcoCoHlRsY2cFEIODwRWpK03OYzifF3xMQuCz3IlDwLDZMR7O5EMwrCHJCBJXOfvWbmQWe5FMpS+rckD8Ntb/D4uAoYESCMNxus4uEInQUl3T
+5dOIRQzEQb3SHlDaqxQzUJb3c4QB4gNA4gMHxAT7QiB8tGmm0N974CngYweNNgB0LMJNA4wbAGMFGHkDiIEwqgZHm86OQkAcwlPhAA4D6BSAbQXABeBaBQBGQpLOKD9hcCxhgoFAbAOlHiBcgNhsldAEBB2GQBccsKcOEq0/AvA7UYXUVt+ENJMQGyWcWePcLxh7BV27XWqJJz6wqCNW9lBoCLg4KxCemytV4Qjx74mtR+gVFTspwDE5CbWvw01m
 
-76hYRsMBEdgBMF+irBHICwaVzbF5dYY6I2NoHixFVUa+FXevqUHcG9VCRXg1mH51w58xuAS8MkdXnFjQc2kJIIvFawOo7dohk0eFO/Faor9lug7ZIVyIFFDsN+I7LIYd2FFn9RRBQ+rtKO37+tgg8PHYN2G7BjBlRuAb4AgEBSJAEAycX8V1kRCaBjgmgLocQBPTBExgCARIKaK9DDCaIowrCkWwWA9hfI4AbiLSDgBwBTQ+saHoUGgBYhMgFQND
+PwBGxUgRCVCwYG2RjvC0q5PEziWMJ7EA2Az2c3PCNDaIjPcng33IyMfDMjdehuaAYKLKBGjcA2o1nuiOrBoQ6wvos0sxUC4d5vMFsfaHiLBAMJCRN/BymuBhANB/6keVLmkLKGZcO22vJvBz1bzS9n+YYuqD1R/hciDqs4sAXyKnYciGukaG9H+Bib3oM06Y9OBoWSAwgRo+Y5hMrSG4t5D2mLfsRNxW5vspIs3ZbrOMfaYTb2j41bn+w27lcrIu
 
-niDWAMBCACACgB0ErFJ9QuuuMYAxMYkSgIA2AEQL60TAHh9ApoC6BCPC5x8XWZE1iUsB1AcSMg1ExPloOrGJdoRgktiSJM4nhQGxWVUvpACEnsTOJ3ErLq707EsS5J2QUSVxMKpoiMupQNSfJIyAiVMRjg2ScJP0mcSwcOItNvhLMl2SMg4UODgh3wBIcbJ6ktyeB0g5GBlxPk8yfoBY5GQ0OGHLDun10m2SoABknCXAOQEC9NuMU3yfoA3bEB4B
+3eyOV0Qj4AYAygSLp5Ag6MCoOzAioCyFuzMAKALIYYIkDaC9A4oRgWMB0B2C6h4gjIJoCyAe4+iCo/owQdimsp8okgMNQ+JjTOFbARoRcbOJ+mpRRJbcSgoqi/GRBHR4kliDMU8M1ZjhXgfUYBk5hnjcw2OGgmzojz+GKdKxqnfQcPyMHj9GxenannCOhFXRIRmg1NMvxbHmc1+pQDfoVVs6jiHOsbTIZVSnFQCKh7nR8dMJjzSUlxLVDETmzXEN
 
-yUmmMb2cl6S4pnEvnuWEN7oAnozElyQVLckkxLJXoZ9jaGwDLAjQXVMaPRCMwH8ZYM0C4J9nqmNT8AZbaXEvHeBLwNwLCNBKyXwlGA2ABgPCbOAIAXZGQPlIcJNAl6pSQplk/ERVQgBlSyJcoEgAFKCn4TdpxAU0AgBJ4CwdppAEgAAFk2ANojdrgE0DBB8hF0kgPaxBwdAeQjkUgMoClAAAKGaPcF4CfBqAQMwGbSgACU1objsoAOwRVvpf02eE
+gNxhbNPLCAJonF9xY4NjLWAiHHjrU8koLHSOvEMjbxWvRvImEfHxDCur44Hl3j148iSh47WiZAKnwXUZ2ada6s/hvS6TbU+IcZFSggnPwrS8aOOChl6L3EHCEITzO1jJB71m4aGMyUOnTgBZ0xR9LCptiQnHsUJOLJMGhAiRJIK6pJRGrPSiQi5402xERLcMWn7tVuS3PCYf224qRcJaEySIRL26PiSJNkIibOIolUSaJLsU0YxMu6HAEcuoYgEy
 
-yF4BDgQZiMkGRDIdG9dVp2QTSRyAclQAJw2sa2IUNzbcdSwl06AWgBBxZAHpT0vjgJxpDYAiAZ0sljSA4C5t6ZBQ4QFACAikt+OBQigaQA5CkAWgHMiivzOBCCzhZ90x6Z5EoorS7Ac7XUTkGNDsy4AN0u6ezNlnPT8J0oAmYwHLBTT8AM0w9iVK8HBBZ2ZeYEKxJZAGBipXXTwSKJgiHjxRBgY0OkEtljcB2F/X/iyDaCWyDZRs5SGhMdH8BShw
+x2Asgc+Ww/gfn0EHPAhEO0bvPLGabEJ/u1fQ+NVCmZTw1sKCMLtpI+4rp40FeMnCIkzHPD3wW0D1ASkXK4zghtkrQfbh0ED8fhmPOsf8OiqAjPJK/UEQvxLF+Sux7Y/1kFNX5tjQpbgwqlv2RFeC9+zMA/v4K577MYuV/NPJW2zwCwiRW1F4F7Vb7NSqR6iddFElb6pCW2k7WsD/zinCgsu94goQe25GPifxN4+KQKM6lCjggIor4O7xFC4Av4Yw
 
-QesOezbBAA==
+MUZoA3SHBiAYwFoacFd7tJw5NST3jVDXB+8dRA0hQvqM2zJT6YAARwYFgAmw4ADiI5DgBwB9Qp2bgDWGgDGRMgFQIgJqzWAMBCACACgB0BrH8yyx3IX3r3MXGFAIA2AEQLFVjD7h9A+oPyg5IrHOSB5Q8pYGqFHkZAO56nQwX8OMHCzZ5w8heWPLCjAiPW8sweVvOyCLzx5EI4zvjmblzyR5Y8ieXDFhEhTD5884+WPK4qKyMR50R+dfIyA/ZIpu
+
+/S+UfKgAnywonAKAGFApjag2o5OT+dvIyDALsguoCltlI/lXyYF+gYsFgH0iNzBYB7BAGMFMHQLn5GQSue+1Ilm9/5T8wBWPPpbEB/pZEwDs5HIVfz9Af7YsJsLNBz9SAqUzeRQqAUh5X5LoKbmaGwDLAdQTVKLvvC2gYloQecCvkziEUiL8ATLUyvRDJGkgxsU00oEYDYAGBq5g4AgLdjTxJ8CFlCjIK/N8EYiIAmuIUFGFIAkAEFRgJBc3IlB2
+
+L9w0lIXE4tsXEAAAsmwBoH0tcAmgYIN7P9yeL5OX2DoOyAcikBlAIoAABSk5qAvAXqkkpRA2dU0AASlNBcUEAygE7AFWiVxLiQtIXgH2ESVFLEl+OTJUYpQXwL7cP8qACOEakBcTeFQ7JYWFsVYTUAX2LIAEqCUUUqKkYbAEQDcWoAUWqIDgBUP6XG9hAUASSci0orG9+BpAZkKQBaCTL5lAy2sEspWX+LAlHkFFkYrsCksWhOQXUBMrgA+K/FEy
+
+vZcEscgktCAjAYsNovwC6KeBbCsIMEHuW55UQQ8+kAYFYW+jPZpQ2qVAIMC6h0gXywWK23uz0g2g9yx5c8sYpFzwAzFC3sEGrDFymwQAA===
 ```
 %%
