--- a/基础物理/杨振宁/第十三讲.md
+++ b/基础物理/杨振宁/第十三讲.md
@@ -34,32 +34,37 @@ So, and that's equal to T, the total torque is equal to, total torque is the for
 \end{align}$$
 The other two are cyclic permutations of this one.Now this is the most important formula, which governs the rotation of the rigid body around its center of mass. It's nonlinear. Nonlinear in the sense that the equation that we want, the solution we want, is omega 1, omega 2, omega 3 as functions of time.Just like for linear motion, you want V1, V2, V3 as functions of time. But this is linear. That means omega occurs only once, but here omega occurs twice.So this is a very complicated equation. （另外两个是它的循环排列。现在这是最重要的公式，它控制着刚体绕其质心的旋转。这个公式是非线性的。非线性指的是我们想要的方程、我们想要的解，即ω1、ω2、ω3作为时间的函数。就像线性运动中你想要V1、V2、V3作为时间的函数一样。但这是线性的，意味着ω只出现一次，而这里ω出现了两次。所以这是一个非常复杂的方程。）
 
-
 Whenever you have a nonlinear equation, in general the problem becomes much more complicated. So this was a famous problem in the 19th century.In fact, there was a famous romance in the 19th century. There was a beautiful young woman named Sonya Kovaleski. She was a Russian woman who lived from 1850 to 1891.In 1888, when she was 38 years old, she won an important French prize. The French Academy wanted to have some mathematical discussion of the solution of this equation. （当你遇到非线性方程时，问题通常会变得复杂得多。这在 19 世纪曾是个著名难题。实际上，19 世纪还发生过一段著名的浪漫故事。有位名叫索尼娅·柯瓦列夫斯卡娅的美丽年轻女性，这位 1850-1891 年间生活的俄罗斯女性，在 38 岁那年（1888年）获得了法国一项重要奖项。当时法兰西科学院希望就这个方程的解法展开数学探讨。）
 
 So it was a prize, and she won the prize.In fact, it was a very large amount of money. But she had already been famous before that because she was a brilliant mathematician and she was one of the very beautiful women in universities at that time. In those days, in Europe as well as in China, women were discriminated against.The Chinese attitude was that women are bad luck. The attitude in Europe was that beautiful women are dangerous. But she was a Russian woman, and at the age of 20, she came to Berlin as a student.As a student of Waelstrasse. Waelstrasse was 35 years older than Kovaleski. （所以这是一项大奖，而她赢得了这个奖项。事实上，奖金数额非常巨大。但在此之前她已经很有名了，因为她是一位杰出的数学家，也是当时大学里非常美丽的女性之一。在那个年代，无论是在欧洲还是中国，女性都受到歧视。中国人的观念是女人是祸水。欧洲人的观念则是美丽的女人很危险。但她是一位俄罗斯女性，20岁时以学生身份来到柏林，成为魏尔斯特拉斯的学生。魏尔斯特拉斯比柯瓦列夫斯卡娅年长 35 岁。）
 
 And she became his student. Waelstrasse at that time was the most important mathematician in Europe. He was extremely famous. He was, for example, the person who really defined what a rational number was.And he had great contributions to, in fact, all branches of mathematics at that time. So he was a powering figure. And he never married in his life.And here came this young 20-year-old beautiful Russian woman who became his student. But she was not allowed to listen to his lectures because women were not allowed in the lecture halls. So he gave her private letters.（于是她成了他的学生。当时的魏尔斯特拉斯是欧洲最重要的数学家，声名显赫。例如，正是他真正定义了有理数的概念。事实上，他对当时数学的各个分支都做出了巨大贡献，是一位举足轻重的人物。他一生未婚。这时，这位 20 岁的年轻美丽的俄罗斯女子成为了他的学生。但她不被允许听他的讲座，因为女性不允许进入讲堂。因此，他给她私下授课。）
 
-
 So for four years, she was his student in this manner. And also they had lots of correspondence. But after she died, she died before he did.After she died, he burned all these letters. So one does not really know the details of their relationship. But there were all kinds of rumors.If you want to read about this, you read... I had mentioned to you earlier that there was a very important book called The Man of Mathematics by Bell. And it has been translated into Chinese. And the book is called Shuxue Jinyin.That is, I believe, the first book which had a kind of a biography of Weierstrass and Kovalevsky. But in recent years, biography writing about scientists has become a fashion in America and Europe. So there has been several books published, both of Weierstrass' biography and of Sonja Kowalewski's biography. （就这样，她以这种方式做了他四年的学生。他们之间还有大量的书信往来。但她先于他去世后，他就把这些信件全部烧毁了。所以人们并不真正了解他们关系的细节。但各种流言蜚语满天飞。如果你想了解这方面的情况，可以读读...我之前跟你提过贝尔写的那本非常重要的书《数学大师》。这本书已被翻译成中文，书名叫做《数学精英》。我相信这是第一本包含魏尔斯特拉斯和柯瓦列夫斯卡娅传记的书。但近年来，科学家传记写作在欧美已成为一种风尚。因此已经出版了好几本书，既有关于魏尔斯特拉斯的传记，也有关于索菲娅·柯瓦列夫斯卡娅的传记。）
-
-
-（17.16）
-
-
-
-
-
-
 
 Now let us take the special case of free, free rigid body. That means the torque is equal to zero, if the body is free.Then we have I1 dot. If I multiply the first, if I multiply this one by omega 1, and multiply this by omega 2, and multiply this by omega 3 and add, I get I1 omega 1. The right hand side cancels because every line is proportional to omega 1, omega 2, omega 3, and the six I terms cancel each other, so therefore it's equal to zero. （现在让我们以自由刚体这一特例来说明。这意味着如果物体是自由的，扭矩就等于零。那么我们得到I1点。如果我将第一个乘以ω1，这个乘以ω2，这个乘以ω3然后相加，就得到I1ω1。右边会相互抵消，因为每一行都与ω1、ω2、ω3成比例，六个I项相互抵消，因此结果等于零。）
 
+自由刚体：$\vec{T}=0$
+可以得到：$$\begin{align}
+I_{1}\dot{\omega}_{1} = (I_{2}-I_{3}) \omega_{2}\omega_{3} \\[1.2ex]
+I_{2}\dot{\omega}_{2} = (I_{3}-I_{1}) \omega_{3}\omega_{1} \\[1.2ex]
+I_{3}\dot{\omega}_{3} = (I_{1}-I_{2}) \omega_{1}\omega_{2}
+\end{align}$$
+如果第一个式子乘上 $\omega_{1}$，第二个乘 $\omega_{2}$，第三个乘 $\omega_{3}$，然后加起来，$$I_{1}\omega_{1}\dot{\omega}_{1}+I_{2}\omega_{2}\dot{\omega}_{2}+I_{3}\omega_{3}\dot{\omega}_{3}=0$$对其积分，可得 $$\frac{1}{2}(I_{1}\omega_{1}^2+I_{2}\omega_{2}^2+I_{3}\omega_{3}^2)=\text{const}$$这实际就是能量守恒定律。
 
-And this I can integrate, so therefore I get one half of I1 omega 1 dot squared plus I2 omega 2 dot squared plus I3 omega 3 dot squared is equal to a constant.That actually is the conservation of energy. We shall come back to this later. Here we just find a mathematical theorem saying that that expression is.But later on we would come to the realization that that expression, in fact, is the energy of rotation. So let us take a special case. （我可以将其积分，因此得到1/2乘以I1乘以ω1点平方加上I2乘以ω2点平方加上I3乘以ω3点平方等于一个常数。这实际上就是能量守恒定律。我们稍后会再讨论这一点。这里我们只是发现了一个数学定理，表明这个表达式成立。但后来我们会意识到，这个表达式实际上就是旋转的能量。让我们来看一个特例。）
 
 
-Special case one, I1 equal to I2 equal to I3.In that case, you look at these three, because the I's are equal, so this quadratic terms are all zero. So that says omega 1, omega 2, omega 3 are all constants. And that means omega as a vector is a constant, independent of time.So for such a body, when it begins to rotate, it has an axis, and that axis is fixed, and it's a very smooth rotation. If you have a sphere, a sphere has I1 equal to I2, I3, it has that property. （特殊情况一，I1等于I2等于I3。在这种情况下，你看这三个，因为I相等，所以这些二次项都为零。这意味着ω1、ω2、ω3都是常数。也就是说，ω作为一个矢量是恒定的，与时间无关。因此，对于这样的物体，当它开始旋转时，它有一个轴，这个轴是固定的，旋转非常平稳。如果你有一个球体，球体的I1等于I2、I3，它就具有这种特性。）
+And this I can integrate, so therefore I get one half of I1 omega 1 dot squared plus I2 omega 2 dot squared plus I3 omega 3 dot squared is equal to a constant.That actually is the conservation of energy. We shall come back to this later. Here we just find a mathematical theorem saying that that expression is.But later on we would come to the realization that that expression, in fact, is the energy of rotation.  （我可以将其积分，因此得到1/2乘以I1乘以ω1点平方加上I2乘以ω2点平方加上I3乘以ω3点平方等于一个常数。这实际上就是能量守恒定律。我们稍后会再讨论这一点。这里我们只是发现了一个数学定理，表明这个表达式成立。但后来我们会意识到，这个表达式实际上就是旋转的能量。）
+
+
+（20.36）
+
+
+
+
+
+
+So let us take a special case. Special case one, I1 equal to I2 equal to I3.In that case, you look at these three, because the I's are equal, so this quadratic terms are all zero. So that says omega 1, omega 2, omega 3 are all constants. And that means omega as a vector is a constant, independent of time.So for such a body, when it begins to rotate, it has an axis, and that axis is fixed, and it's a very smooth rotation. If you have a sphere, a sphere has I1 equal to I2, I3, it has that property. （让我们来看一个特例。特殊情况一，I1等于I2等于I3。在这种情况下，你看这三个，因为I相等，所以这些二次项都为零。这意味着ω1、ω2、ω3都是常数。也就是说，ω作为一个矢量是恒定的，与时间无关。因此，对于这样的物体，当它开始旋转时，它有一个轴，这个轴是固定的，旋转非常平稳。如果你有一个球体，球体的I1等于I2、I3，它就具有这种特性。）
 
 
 But not only a sphere, a cube, a cube also has I1, although cube is not spherically symmetrical, but it's I1 is equal to I2 is equal to I3.And you can take any axis, you flip it, it will continue to rotate around that axis. Special case two, I1 is equal to I2 is not equal to I3. Yes, last time we discussed that I1, I2, I3 form a triangle.Now, if if I was equal to I2, not equal to I3, for example, it could be this way. This is I3 or it could be this way. And if it is cylinder, which is very long, it's this way.We said that last time. （但不仅仅是一个球体，立方体也是如此。立方体虽然不具备球对称性，但其I1等于I2等于I3。你可以选择任意轴翻转它，它会继续围绕该轴旋转。第二种特殊情况是I1等于I2但不等于I3。是的，上次我们讨论过I1、I2、I3构成一个三角形。现在，如果I1等于I2但不等于I3，例如，可能是这样。这是I3，或者也可能是这样。如果是非常长的圆柱体，就是这种情况。我们上次已经讨论过这一点。）
