--- a/基础物理/杨振宁/第六讲.md
+++ b/基础物理/杨振宁/第六讲.md
@@ -1,21 +1,36 @@
 
-Professor Ruan and Professor An Discussed with me I compared it all at once bout your situation Compared to I taught two big things at Stonebrook I think Satisfied Everyone to The attitude of doing CT With CT results All very good So this is very good Now there are some new Online For example, Syllabus 3 But this Syllabus 3 There is a picture This picture is Say it's a A projector The trajectory of a projector Do you have any comments on this picture? （阮教授和安教授与我讨论了我一次，比较了你的情况相比我在石溪教的两件大事我认为大家对做习题的态度与习题结果都非常好，所以这非常好，现在有一些新的在线内容例如教学大纲3但这个教学大纲3有一张图片这张图片说的是一个投影仪投影仪的轨迹你对这张图片有什么意见吗）
+Professor Ruan and Professor An Discussed with me I compared it all at once bout your situation Compared to I taught two big things at Stonebrook I think Satisfied Everyone to The attitude of doing CT With CT results All very good So this is very good Now there are some new Online For example, Syllabus 3 But this Syllabus 3 There is a picture This picture is Say it's a A projector The trajectory of a projector Do you have any comments on this picture? （阮教授和安教授与我讨论了我一次，比较了你们的情况，相比我在石溪教的，我认为大家对做习题的态度与习题结果这两件大事上做的都很好，所以这非常好，现在有一些新的在线内容例如教学大纲 3，但这个教学大纲 3 有一张图片，这张图片说的是一个投影仪投影仪的轨迹，你对这张图片有什么看法吗）
 
+This picture is not quite right Because he drew Not a parabola Parabola A little different from this Because parabola Its curvature Is getting more and more A parabola If you go down Almost straight He is This is my dense drawing He Did not put this parabola This concept Put in I think for a ball A circle The nature With a sine wave With a parabola You draw a few more of your own You know It can be seen that it is different （这幅图不太对，因为他画的不是抛物线。抛物线和这个有些不同，因为抛物线的曲率是越来越大的（应该是越来越小，曲率大更弯曲）。如果你继续往下画，抛物线会变得几乎笔直。他画得比较密集，没有体现出抛物线的概念。我觉得对于一个球、一个圆来说，它的性质和正弦波、抛物线是不一样的。你多画几次就能看出它们的区别。）
 
- This picture is not quite right Because he drew Not a parabola Parabola A little different from this Because parabola Its curvature Is getting more and more A parabola If you go down Almost straight He is This is my dense drawing He Did not put this parabola This concept Put in I think for a ball A circle The nature With a sine wave With a parabola You draw a few more of your own You know It can be seen that it is different （这幅图不太对，因为他画的不是抛物线。抛物线和这个有些不同，因为抛物线的曲率是越来越大的。如果你继续往下画，抛物线会变得几乎笔直。他画得比较密集，没有体现出抛物线的概念。我觉得对于一个球、一个圆来说，它的性质和正弦波、抛物线是不一样的。你多画几次就能看出它们的区别。）
- 
- 
- Let's talk about a Remember After we calculated for a while We got a formula This formula I will tell you now There is a method Can be recorded relatively simply Because What he did There is an R This R Turn it into a Dirichlet curve What state does it become? It becomes two One is R dot Another one Is R theta dot If you look at your When we calculated last time From R This vector After it becomes its Dirichlet It becomes two components One is in the original direction（我们来谈谈一个记忆点。经过一段时间的计算后，我们得到了一个公式。这个公式我现在就告诉你。有一种方法可以相对简单地记录下来。因为他所做的，有一个 $\vec{r}$。对其求导，它会变成两个部分：一个是 $\dot{r}$，另一个是 $r \dot{\theta}$。如果你回顾一下我们上次的计算，这个向量经过求导后，它会变成两个分量：一个保持原方向。）
+### 平面运动加速度方程记忆方法
 
-> [!NOTE]
-> 记住上节课 $\dot{r}$ 和 $\ddot{r}$ 的方法：你可以想象一个图，有一个矢量 $\vec{r}$，将其求导分解，第一项为 $\dot{r}$，方向与 $\vec{r}$ 一致，另一个垂直 90°，大小是 $r \dot{\theta}$。
-> 然后可以把第一个分量，再次想象为和 $\vec{r}$ 一样，再次求导，又有两项，则相应的两项就分别是 $\ddot{r}$ 和 $\dot{r}\dot{\theta}$；然后第二个分量同理，也如此求导产生两项，第一个仍是保持与 $\vec{r}$ 成 90°，大小为 $\dot{(r \dot{\theta})}=\dot{r}\dot{\theta}+r \ddot{\theta}$，另一个分量则再转 90°，即与 $\vec{r}$ 成 180° 的 $(r \dot{\theta})\dot{\theta}$
-> 组合起来，在 $\hat{r}$ 方向上大小为 $\ddot{r}-r \dot{\theta}^2$，在 $\hat{\theta}$ 方向上则为 $2\dot{r}\dot{\theta}+r \ddot{\theta}$
+  Let's talk about a Remember After we calculated for a while We got a formula This formula I will tell you now There is a method Can be recorded relatively simply Because What he did There is an R This R Turn it into a Dirichlet curve What state does it become? It becomes two One is R dot Another one Is R theta dot If you look at your When we calculated last time From R This vector After it becomes its Dirichlet It becomes two components One is in the original direction（我们来谈谈一个记忆点。经过一段时间的计算后，我们得到了一个公式。这个公式我现在就告诉你。有一种方法可以相对简单地记录下来。因为他所做的，有一个 $\vec{r}$。对其求导，它会变成两个部分：一个是 $\dot{r}$，另一个是 $r \dot{\theta}$。如果你回顾一下我们上次的计算，这个向量经过求导后，它会变成两个分量：一个保持原方向。）
 
-But the magnitude is R dot One is at 90 degrees Is R theta dot So remember one R You want to become its time To become two Okay, let's call this one How much is this one Let me put this one The same thing Do it Is to take this one as This R The method just now What is its Dirichlet curve? Is to be divided into two One is R dot Dot again So it becomes R double dot Another one is R dot Rotate 90 degrees Multiply by theta dot So it becomes like this I just copied From R to these two Now it's not R It's R dot Of course it's like this This is this part What about the other part? I can't tell The other is R theta dot So its Its Derivative Is R theta dot dot I just said One thing is dot In its original direction Is the magnitude of its thing Dot, so this is it But there is another one It rotates 90 degrees Multiply by theta dot So it becomes this So this is R Theta dot Multiply by theta dot So It becomes four This is two, this is two Then I add it up Then you see In this R direction Which one is it? It's R double dot It comes from here With this negative R theta dot square In this theta direction There are two This is R dot theta dot Add up R theta dot Dot it again This is equal to （略，直接看公式）
-  
+在上一讲中，曾经推导过如下公式：
+$$
+\begin{align}
+\ddot{\vec{r}}&=(\ddot{r}\cos \theta-\dot{r}\sin \theta \dot{\theta}-\dot{r}\sin \theta \dot{\theta}-r\cos \theta \dot{\theta}^2-r\sin \theta \ddot{\theta}, \quad\ddot{r}\sin \theta+\dot{r}\cos \theta \dot{\theta}+\dot{r}\cos \theta\dot{\theta}-r\sin \theta \dot{\theta}^2+r\cos \theta \ddot{\theta}) \\[1.5ex]
+&=[(\ddot{r} - r\dot{\theta}^2)\cos\theta - (2\dot{r}\dot{\theta} + r\ddot{\theta})\sin\theta, \quad(\ddot{r} - r\dot{\theta}^2)\sin\theta + (2\dot{r}\dot{\theta} + r\ddot{\theta})\cos\theta] \\[1.5ex]
+&=\ddot{\vec{r}}\hat{r}+2\dot{r}\dot{\theta}\hat{\theta}-r\dot{\theta}^2\hat{r}+r \ddot{\theta}\hat{\theta} \\[1.5ex] 
+&=(\ddot{r}-r \dot{\theta}^2)\hat{r} + (2\dot{r}\dot{\theta}+r \ddot{\theta})\hat{\theta}
+\end{align}
+$$
+
+这个东西怎么来记忆？首先我们回顾一下，$\vec{r}=(r\cos \theta, r \sin \theta)$，且有，$\hat{r}=(\cos \theta, \sin \theta)=\frac{\vec{r}}{r}$，所以：$$\vec{r}=r \hat{r}$$这个很好理解，因为 $\hat{r}$ 是 $\vec{r}$ 方向的单位向量而已。 对其求导，可得速度 $$\vec{v}=\dot{r}\hat{r}+r\dot{\hat{r}}=\dot{r}\hat{r}+r\dot{\theta}\hat{\theta}$$因为 $\hat{\theta}=(-\sin \theta, \cos \theta)$，对 $\hat{r}$ 求导正好是 $\dot{\theta}\hat{\theta}$
+
+所以观察从 $\vec{r}$ 到 $\vec{v}$ 这一步，暂且忽略方向上的单位向量 $\hat{r}$ 和 $\hat{\theta}$，在径向上结果只是这一项自身求导，如 $r$ 求导得到 $\dot{r}$，而在径向上（旋转 90°）是这一项乘上一个 $\dot{\theta}$，如此处得到 $r \dot{\theta}$，
+
+![[Pasted image 20251031162531.png|300]]
+所以再次求导，从 $\vec{v}$ 到 $\vec{a}$，就从两项变 4 项，其大小和方向如图所示，就一清二楚了。现在组合起来，在 $\hat{r}$ 方向上大小为 $\ddot{r}-r \dot{\theta}^2$，在 $\hat{\theta}$ 方向上则为 $2\dot{r}\dot{\theta}+r \ddot{\theta}$，注意图中最后一项旋转了 180°，与第一项方向完全相反了，所以是负的。
+
+But the magnitude is R dot One is at 90 degrees Is R theta dot So remember one R You want to become its time To become two Okay, let's call this one How much is this one Let me put this one The same thing Do it Is to take this one as This R The method just now What is its Dirichlet curve? Is to be divided into two One is R dot Dot again So it becomes R double dot Another one is R dot Rotate 90 degrees Multiply by theta dot So it becomes like this I just copied From R to these two Now it's not R It's R dot Of course it's like this This is this part What about the other part? I can't tell The other is R theta dot So its Its Derivative Is R theta dot dot I just said One thing is dot In its original direction Is the magnitude of its thing Dot, so this is it But there is another one It rotates 90 degrees Multiply by theta dot So it becomes this So this is R Theta dot Multiply by theta dot So It becomes four This is two, this is two Then I add it up Then you see In this R direction Which one is it? It's R double dot It comes from here With this negative R theta dot square In this theta direction There are two This is R dot theta dot Add up R theta dot Dot it again This is equal to （略，直接看上图和公式）
+
+### 例题 1：秋千
+
 OK, let's make a very simple example This is a swing This is called theta Then There is a swing which Swings back and forth If we analyze the force On this swing There is one force which is mg Going downwards There is another force Which is along the direction of the rope This direction But the sum of these two Has to be along the direction of the tangent（好的，让我们举一个非常简单的例子。这是一个秋千，摆动位置与竖直初始位置角度称为 θ。然后有一个来回摆动的秋千。如果我们分析这个秋千上的力，有一个向下的力 mg，另一个力沿着绳子的方向。但这两个力的合力必须沿着切线方向。）
 
+（图略，自行脑补）
 秋千被限制在做圆周运动，所以 $\dot{r}=0$，径向上的速度为 0，则 $\ddot{r}=0$。则 $\vec{\ddot{r}}=\hat{r}(-r \dot{\theta}^2)+\hat{\theta}(r \ddot{\theta})$
 
 Because if you take this formula Take this formula R double dot Let's look at it first R dot is equal to zero Because the swing The swing is confined to move On a circle Therefore R double dot is equal to zero So if you take this formula This is equal to zero So it is equal to So it is equal to R hat Multiplied by Minus R theta dot square Add up Theta hat R dot is zero This is R theta double dot Right（因为如果你采用这个公式 采用这个公式 R双点 我们先看看 R点等于零 因为摆动 摆动被限制在 一个圆周上运动 因此R双点等于零 所以如果你采用这个公式 这等于零 所以它等于 所以它等于 R帽 乘以 负Rθ点平方 加上 θ帽 R点为零 这是Rθ双点 对吧）
@@ -24,18 +39,24 @@ So Therefore its acceleration has two directions One is in the direction of R On
 
 在 $\hat{\theta}$ 方向上，重力的分量，$-mr \ddot{\theta}=mg \sin \theta$，得到 $\ddot{\theta}=-g\sin \theta / r$（这里负号的原因是 $\theta$ 增大的方向为 正，而重力的切线分量总是指向平衡位置 $\theta=0$，是个反的）。
 
-So therefore we get The force M Multiplied by the acceleration R theta double dot That's equal to The component of Mg This is theta Times the sine theta R is negative Therefore theta double dot Is equal to minus g sine theta Over R If you write it like this It becomes like this This is called a differential equation Wave function（因此，我们得到力 M 乘以加速度 R θ 双点等于 Mg 的分量，即 θ 乘以 sin θ R 为负。因此，θ 双点等于 -g sin θ 除以 R。如果这样写，就变成了这样。这被称为微分方程。）$$\frac{\mathrm{d}^2\theta}{\mathrm{d}t^2}=-\frac{g}{r} \sin \theta$$
+So therefore we get The force M Multiplied by the acceleration R theta double dot That's equal to The component of Mg This is theta Times the sine theta R is negative Therefore theta double dot Is equal to minus g sine theta Over R If you write it like this It becomes like this This is called a differential equation Wave function（因此，我们得到力 M 乘以加速度 R θ 双点等于 Mg 的分量，即 θ 乘以 sin θ R 为负。因此，θ 双点等于 -g sin θ 除以 R。如果这样写，就变成了这样。这被称为 *微分方程*。）$$\frac{\mathrm{d}^2\theta}{\mathrm{d}t^2}=-\frac{g}{r} \sin \theta$$
 Wave function Is a very important subject i n differential and integral calculus, you'll be learning about Differential equations In your mathematics course We shall come back to this formula To solve a differential equation Is called to integrate it And there are several ways of integrating it But we'll come to that in the future(微分方程是微积分中一个非常重要的主题，你将在数学课程中学习微分方程。我们会回到这个公式来解微分方程，这被称为积分。积分有几种方法，但我们以后会讲到。)
 
- I think we better do some exercises Chapter 5 Problem 47p It talks about a monkey Climbing up, and this pulley has a weight of 15 kilograms on the other side. The monkey weighs 10 kilograms. So it's very simple.  Let's analyze what are the forces on the monkey. There's one force which is going downwards. That is the mass. Let's call this capital M and this small m. So there's a small mg. There's a force on monkey. And the other force is the tension on the rope.(我觉得我们最好做一下第五章的第 47 题练习。题目讲的是一只猴子向上爬，滑轮另一侧挂着一个15公斤的重物。猴子重10公斤。这很简单。我们来分析一下猴子受到的力。有一个向下的力，就是重力。我们把这个设为M，这个设为m。所以有一个小的mg作用在猴子身上。另一个力是绳子上的张力。)
+### 例题 2
 
-So the monkey is climbing up. If the monkey doesn't do anything, he will accelerate upwards, because the 15 kilograms is heavier than its own weight. But if it starts to climb very fast, it could go the other way.(所以猴子正在往上爬。如果猴子什么都不做，它会向上加速，因为15公斤比它自身的重量还要重。但如果它开始快速攀爬，情况就可能相反。)
+> [!NOTE]
+> 在第 12 版教材中，该题目是 59，题目是：一只 10 公斤的猴子沿着一根无质量的绳子向上爬，绳子跨过一根无摩擦的树枝，另一端连接着地上一个 15 公斤的包裹。(a) 如果猴子想要将包裹提离地面，它必须具有的最小加速度的大小是多少？如果在包裹被提起后，猴子停止攀爬并抓住绳子，那么此时猴子加速度的 (b) 大小和 (c) 方向，以及 (d) 绳子的张力分别是多少？
+> 提示：（a）包裹即将被提起时，此时绳子上的拉力大小和重物平衡，猴子停止后，两侧各受不同重力，但绳子拉力一致，此时由于猴子轻，将产生向上加速度。
 
-So if we take T minus mg, that's the total force on the monkey. This, according to Newton's second law, is equal to ma, where a is the acceleration of the monkey upwards. So the acceleration is equal to this.  But we know what T is. Now we do it on the block. On the block, there's a force which is mg.(因此，如果我们用T减去mg，这就是猴子受到的总力。根据牛顿第二定律，这等于ma，其中a是猴子向上的加速度。所以加速度等于这个值。但我们知道T是多少。现在我们来看木块。木块上有一个力，即mg。)
+ I think we better do some exercises Chapter 5 Problem 47p It talks about a monkey Climbing up, and this pulley has a weight of 15 kilograms on the other side. The monkey weighs 10 kilograms. So it's very simple.  Let's analyze what are the forces on the monkey. There's one force which is going downwards. That is the mass. Let's call this capital M and this small m. So there's a small mg. There's a force on monkey. And the other force is the tension on the rope.(我觉得我们最好做一下第五章的第 47 题练习。题目讲的是一只猴子向上爬，滑轮另一侧挂着一个 15 公斤的重物。猴子重 10 公斤。这很简单。我们来分析一下猴子受到的力。有一个向下的力，就是重力。我们把重物设为 M，猴子设为 m。所以有一个小的mg作用在猴子身上。另一个力是绳子上的张力。)
+
+So the monkey is climbing up. If the monkey doesn't do anything, he will accelerate upwards, because the 15 kilograms is heavier than its own weight. But if it starts to climb very fast, it could go the other way.(所以猴子正在往上爬。如果猴子什么都不做，它会向上加速，因为 15 公斤比它自身的重量还要重。但如果它开始快速攀爬，情况就可能相反。)
+
+So if we take T minus mg, that's the total force on the monkey. This, according to Newton's second law, is equal to ma, where a is the acceleration of the monkey upwards. So the acceleration is equal to this.  But we know what T is. Now we do it on the block. On the block, there's a force which is mg.(因此，如果我们用 T 减去 mg，这就是猴子受到的总力。根据牛顿第二定律，这等于 ma，其中 a 是猴子向上的加速度。所以加速度等于这个值。但我们知道 T 是多少。现在我们来看重物。重物上有一个力，即 Mg。)
 
 对于猴子：$T-mg=ma_{m}$；对于重物：$T-Mg=-Ma_{M}$
 
-And there is a tension of T. So T minus mg is equal to the acceleration upwards of the big mass. But that's equal to ma minus, because the monkey's acceleration upwards is equal to the block's acceleration downwards, because they are on the same string. So we have these two formulas.(这里有一个张力T。所以T减去mg等于大质量物体向上的加速度。但这等于ma减去，因为猴子向上的加速度等于木块向下的加速度，因为它们在同一根绳子上。所以我们有这两个公式。)
+And there is a tension of T. So T minus mg is equal to the acceleration upwards of the big mass. But that's equal to ma minus, because the monkey's acceleration upwards is equal to the block's acceleration downwards, because they are on the same string. So we have these two formulas.(这里有一个张力 T。所以T减去mg等于大质量物体向上的加速度。但这等于ma减去，因为猴子向上的加速度等于木块向下的加速度，因为它们在同一根绳子上。所以我们有这两个公式。)
 
 With these two formulas, you have you can solve this problem. For example, what would be the case if a is equal to zero? If there's no acceleration, that means if a is equal to zero, that means T has to equal to mg. If T is equal to mg, if T is equal to what happens if a is equal to zero, then from this formula, T is equal to mg. But T is equal to. I've made a mistake. Just a minute. (有了这两个公式，你就能解决这个问题。例如，如果a等于零会怎样？如果没有加速度，也就是说a等于零，那么T必须等于mg。如果T等于mg，如果a等于零时T等于什么，那么从这个公式来看，T等于mg。但T等于...我犯了个错误。稍等一下。)
 
@@ -49,9 +70,11 @@ if the acceleration mass is supposed to speak, mass is not moving. Then then T i
 
 当重物不动，$a_{M}=0$，则 $T=Mg$，$Mg-mg=ma_{m}$    $a_{m} = \frac{Mg-mg}{m}$
 
-So the monkey's acceleration is equal to M minus M divided by M times G. It was for the monkey to climb such that the big block does not move. The monkey has to be accelerated like this. Let's try the next one.（所以猴子的加速度等于M减M除以M乘以G。这是为了让猴子攀爬时大块不动。猴子必须这样加速。让我们试试下一个。）
+So the monkey's acceleration is equal to M minus M divided by M times G. It was for the monkey to climb such that the big block does not move. The monkey has to be accelerated like this. （所以猴子的加速度等于M减M除以M乘以G。这是为了让猴子攀爬时大块不动。猴子必须这样加速。）
 
-The next one is a block, a block moving on a, let me see, a block is moving on a surface without the tension. So on on the block, there are the following forces. This is T, the tension on the rope, and this is M G. The problem is what is if if the acceleration, the block begins to move in this direction.(下一个是一个木块，一个木块在移动，让我看看，一个木块在没有张力的表面上移动。所以在木块上，有以下这些力。这是T，绳子上的张力，这是MG。问题是如果加速度，木块开始朝这个方向移动。)
+### 例题 3
+
+Let's try the next one.The next one is a block, a block moving on a, let me see, a block is moving on a surface without the tension. So on on the block, there are the following forces. This is T, the tension on the rope, and this is M G. The problem is what is if if the acceleration, the block begins to move in this direction.(让我们试试下一个。 下一个是一个木块，一个木块在移动，让我看看，一个木块在没有张力的表面上移动。所以在木块上，有以下这些力。这是T，绳子上的张力，这是MG。问题是如果加速度，木块开始朝这个方向移动。)
 
 So X is equal to point one, two meters per second. And the mass is equal to ninety five hundred kilograms. The block does not move.  This angle is equal to eighteen degrees. The block has two forces on it, T and M G. T can be decomposed into a vertical component and a horizontal component. The vertical component of T must balance M G, because if it does not balance M G, that block would either move upwards or move downwards, which it cannot.(所以ax 等于每秒0.12米。质量为9500千克。该方块保持静止状态。这个角度等于 18 度。方块受到两个力的作用：张力T和重力MG。张力T可以分解为垂直分量和水平分量。T的垂直分量必须与重力MG相平衡，因为如果两者不平衡，方块就会向上或向下移动，而这是不可能发生的。)
 
