--- a/数学物理方法/一、向量分析/1.2 坐标轴的旋转.md
+++ b/数学物理方法/一、向量分析/1.2 坐标轴的旋转.md
@@ -44,12 +44,72 @@ a_{12}&=\cos\left(x_{1}^{\prime}, x_{2}\right)=\sin\varphi, \\[1.2ex]
 a_{21}&=\cos\left(x_{2}^{\prime}, x_{1}\right)=\cos\left(\varphi+\frac{\pi}{2}\right)=-\sin\varphi.
 \end{align}\tag{1.13}$$新符号的优势在于它允许我们使用求和符号 $\sum$，并将方程（1.12）改写为$$x_{i}^{\prime}=\sum_{j=1}^{2}a_{ij}x_{j},\quad i=1,2. \tag{1.14}$$请注意，$i$ 作为一个参数，当它等于 1 时会产生一个方程，当它等于 2 时会产生第二个方程。当然，索引 $j$ 是一个求和索引，一个哑索引，就像积分变量一样，$j$ 可以用任何其他方便的符号代替。
 
+推广到三维、四维或 $N$ 维的情况现在变得简单了。当且仅当 $N$ 个量 $V_j$ 相对于旋转坐标轴的值由下式给出时，这组 $N$ 个量 $V_j$ 被称为 $N$ 维向量 $\boldsymbol{V}$ 的分量。
+$$V_{i}^{\prime}=\sum_{j=1}^{N}a_{ij}V_{j},\quad i=1,2,\ldots,N. \tag{1.15}$$
+和之前一样，$a_{ij}$ 是 $x_i'$ 和 $x_j$ 之间夹角的余弦值。通常不会指明上限 $N$ 和对应的 $i$ 范围。不言而喻，你应该知道你的空间有多少维度。
 
+根据 $a_{ij}$ 的定义，即正 $x_i'$ 方向与正 $x_j$ 方向之间夹角的余弦，我们可以写出（笛卡尔坐标系）
+$$a_{ij}=\frac{\partial x_{i}^{\prime}}{\partial x_{j}}  \tag{1.16a}$$
+使用逆旋转（ $\varphi \to - \varphi$）得到
+$$x_j = \sum_{i=1}^{2} a_{ij}x_i'
+\quad\text{or}\quad\frac{\partial x_j}{\partial x_i'} = a_{ij}.\tag{1.16b}$$
+请注意，这些都是 *偏导数*。通过使用方程（1.16a）和（1.16b），方程（1.15）变为
+$$V'_{i}=\sum_{j=1}^{N}\frac{\partial x_{i}'}{\partial x_{j}}V_{j}=\sum_{j=1}^{N}\frac{\partial x_{j}}{\partial x_{i}'}V_{j}\tag{1.17}$$
 
+方向余弦 $a_{ij}$ 满足 *正交条件*
+$$\sum_i a_{ij}a_{ik} = \delta_{jk}\tag{1.18}$$
+或者，等价地说，
+$$\sum_i a_{ji}a_{ki} = \delta_{jk}\tag{1.19}$$
+这里，符号 $δ_{jk}$  是克罗内克 delta 函数，定义为
+$$\begin{array}{ll}
+\delta_{j k}=1 & \text { for } \quad j=k, \\
+\delta_{j k}=0 & \text { for } \quad j \neq k.
+\end{array}\tag{1.20}$$
+可以很容易地验证，在二维情况下，通过代入方程（1.11）中的具体 $a_{ij}$，方程（1.18）和（1.19）成立。其结果就是非零情况下著名的恒等式 $\sin^2\varphi + \cos^2\varphi = 1$。为了验证一般形式的方程（1.18），我们可以利用方程（1.16a）和（1.16b）的偏导数形式来获得。
+$$\sum_{i} \frac{\partial x_{j}}{\partial x_{i}^{\prime}} \frac{\partial x_{k}}{\partial x_{i}^{\prime}} = \sum_{i} \frac{\partial x_{j}}{\partial x_{i}^{\prime}} \frac{\partial x_{i}^{\prime}}{\partial x_{k}} = \frac{\partial x_{j}}{\partial x_{k}}\tag{1.21}$$
+最后一步遵循偏微分的标准规则，假设 $x_j$ 是 $x_1', x_2', x_3'$ 等的函数。最终结果 $\partial x_{j}/\partial x_{k}$ 等于 $\delta_{jk}$，因为假设 $x_j$ 和 $x_k$ 作为坐标线（$j \neq k$）是垂直的（二维或三维）或正交的（任意维度）。同样地，我们可以假设 $x_j$ 和 $x_k$ （$j = k$）是完全独立的变量。如果 $j = k$，偏导数显然等于 1。
 
+在重新定义向量时，关于其分量在坐标系旋转下的变换方式，我们需要强调两点：
 
+1. 这个定义之所以被提出，是因为它在描述我们的物理世界时既实用又贴切。我们的矢量方程将独立于任何特定的坐标系（甚至不必是笛卡尔坐标系）。矢量方程总是可以在某个特定的坐标系中表达出来，而为了获得数值结果，我们最终必须将方程表达在某个具体的坐标系中。
+2. 这个定义将推广到一个更普遍的形式，从而开启数学的一个分支——张量分析（第 2 章）。
 
+需要说明的是。在 1.3 节中，我们利用矢量分量在坐标旋转下的行为证明了标量积是标量；在 1.4 节中证明了矢量积是矢量；在 1.6 节中则通过标量 $\psi$ 的梯度 $\nabla \psi$ 展示了其矢量性。本章后续内容将以 1.1 节中给出的限制性较小的矢量定义为基础展开论述。
 
+### 小结：向量与向量空间
+
+在数学中，通常将一个由三个实数构成的有序三元组 $(x_1, x_2, x_3)$ 标记为一个向量 $\mathbf{x}$。数 $x_n$ 被称为向量 $\mathbf{x}$ 的第 $n$ 个分量。所有此类向量（遵循下述性质）的集合构成一个三维实向量空间。我们为向量赋予以下五个基本性质：若 $\mathbf{x} = (x_1, x_2, x_3)$ 和 $\mathbf{y} = (y_1, y_2, y_3)$，则：
+
+1.  向量相等：$\mathbf{x} = \mathbf{y}$ 意味着 $x_i = y_i,\quad i = 1, 2, 3$。
+2.  向量加法：$\mathbf{x} + \mathbf{y} = \mathbf{z}$ 意味着 $x_i + y_i = z_i,\quad i = 1, 2, 3$。
+3.  标量乘法：$a \mathbf{x} \leftrightarrow (a x_1, a x_2, a x_3)$（其中 $a$ 为实数）。
+4.  向量取负：$-\mathbf{x} = (-1) \mathbf{x} \leftrightarrow (-x_1, -x_2, -x_3)$。
+5.  零向量：存在一个零向量 $\mathbf{0} \leftrightarrow (0, 0, 0)$。
+
+由于向量分量是实数（或复数），以下运算性质也成立：
+
+1.  向量加法的交换律：$\mathbf{x} + \mathbf{y} = \mathbf{y} + \mathbf{x}$。
+2.  向量加法的结合律：$(\mathbf{x} + \mathbf{y}) + \mathbf{z} = \mathbf{x} + (\mathbf{y} + \mathbf{z})$。
+3.  标量乘法的分配律：$$
+    a(\mathbf{x} + \mathbf{y}) = a\mathbf{x} + a\mathbf{y}, \quad \text{also} \quad (a + b)\mathbf{x} = a\mathbf{x} + b\mathbf{x}.$$
+4.  标量乘法的结合律：$(ab)\mathbf{x} = a(b\mathbf{x})$。
+
+此外，零向量 $\boldsymbol{0}$ 是唯一的，给定向量 $\boldsymbol{x}$ 的负向量也是唯一的。
+
+就向量本身而言，这种方法只是将第 1.1 节的分量讨论形式化。其重要性在于后续章节将要探讨的扩展内容。在第四章中，我们将证明向量不仅构成加法下的阿贝尔群，还构成一个线性空间，其中线性空间中的变换由矩阵描述。最后，或许也是最重要的，对于高等物理学而言，这里介绍的向量概念可以推广到：（1）复数；（2）函数；（3）无限多个分量。这引出了无限维函数空间——希尔伯特空间，该概念在现代量子理论中至关重要。关于函数展开和希尔伯特空间的简要介绍见第 10.4 节。
+
+#### 练习题
+
+**1.2.1**  (a) 证明向量 $\boldsymbol{A}$ 的模长 $A=(A_{x}^2+A_{y}^2)^{1/2}$ 在旋转坐标系中保持不变，即$$(A_{x}^2+A_{y}^2)^{1/2}=({A'_{x}}^2+{A'_{y}}^2)^{1/2}$$也就是说，它与旋转角度 $\varphi$ 无关。这种与角度无关的特性表明 $\boldsymbol{A}$ 在旋转下是*不变的*。
+
+根据公式（1.14）有：$$(x_i')^2 = \left( \sum_{j=1}^2 a_{ij} x_j \right) \left( \sum_{k=1}^2 a_{ik} x_k \right)= \sum_{j=1}^2 \sum_{k=1}^2 a_{ij} a_{ik} \, x_j x_k.$$在根据公式 (1.18) 和 (1.19) 并对 $(x_i')^2$ 求和：$$\begin{align}
+\sum_{i}(x_{i}')^{2}=\sum_{i=1}^N (x_i')^2 &= \sum_{i=1}^N \sum_{j=1}^N \sum_{k=1}^N a_{ij} a_{ik} x_j x_{k} \\[1.2ex]
+&=\sum_{j=1}^N \sum_{k=1}^N \left( \sum_{i=1}^N a_{ij} a_{ik} \right) x_j x_k \\[1.2ex]
+&= \sum_{j=1}^N \sum_{k=1}^N \delta_{jk} x_j x_k
+\end{align}$$
+$\delta_{jk}$ 仅在 $k=j$ 时非零，所以：$$
+\sum_{k=1}^N \delta_{jk} x_j x_k = x_j x_j = x_j^2.$$于是：$$
+\sum_{i=1}^N (x_i')^2 = \sum_{j=1}^N x_j^2.$$
 
 
 \boldsymbol{A}
