--- a/理论物理/朗道/一、力学/第 2 章、守恒定律.md
+++ b/理论物理/朗道/一、力学/第 2 章、守恒定律.md
@@ -111,57 +111,53 @@ S=S^{\prime}+\mu\boldsymbol{V}\cdot\boldsymbol{R}^{\prime}+\frac{\mu V^{2}}{2}t,
 
 ![[Pasted image 20251022111556.png|150]]
 
-我们首先研究，在系统转动时，从坐标原点（位于转动轴上）指向系统中任意质点的径矢的位移，径矢端点的线位移与转角的关系为（如图 5 所示）$$|\delta \boldsymbol{r}|=r \sin \theta \cdot \delta \varphi$$位移矢最的方向垂直过 $\boldsymbol{r}$ 和 $\delta \boldsymbol{\varphi}$ 的平面。显然有$$\delta \boldsymbol{r}=\delta \boldsymbol{\varphi} \times \boldsymbol{r}  \tag{9.1}$$在系统转动时不仅径矢的方向改变，而且所有质点的速度也改变，并且所有矢量的变化规律相同，所以速度相对固定坐标系的增量为$$
+我们首先研究，在系统转动时，从坐标原点（位于转动轴上）指向系统中任意质点的径矢的位移，径矢端点的线位移与转角的关系为（如图 5 所示）$$|\delta \boldsymbol{r}|=r \sin \theta \cdot \delta \varphi$$位移矢量的方向垂直过 $\boldsymbol{r}$ 和 $\delta \boldsymbol{\varphi}$ 的平面。显然有$$\delta \boldsymbol{r}=\delta \boldsymbol{\varphi} \times \boldsymbol{r}  \tag{9.1}$$在系统转动时不仅径矢的方向改变，而且所有质点的速度也改变，并且所有矢量的变化规律相同，所以速度相对固定坐标系的增量为$$
 \delta \boldsymbol{v} = \delta \boldsymbol{\varphi} \times \boldsymbol{v} \tag{9.2}
 $$
-将这些表达式代入转动时拉格朗日函数不变的条件$$\delta L=\sum_{a}\left(\frac{\partial L}{\partial\boldsymbol{r}_{a}}\cdot\delta\boldsymbol{r}_{a}+\frac{\partial L}{\partial\boldsymbol{v}_{a}}\cdot\delta\boldsymbol{v}_{a}\right)=0$$并做代换 $\frac{\partial L}{\partial \boldsymbol{v}_{a}} = \boldsymbol{p}_{a}, \quad \frac{\partial L}{\partial \boldsymbol{r}_{a}} = \dot{\boldsymbol{p}}_{a},$ 得$$\sum_{a}\left[\dot{\boldsymbol{p}}_{a}\cdot(\delta\boldsymbol{\varphi}\times\boldsymbol{r}_{a})+\boldsymbol{p}_{a}\cdot(\delta\boldsymbol{\varphi}\times\boldsymbol{v}_{a})\right]=0$$置换因子的次序并将 $\delta \boldsymbol{\varphi}$ 移到求和号之外，$$\delta \boldsymbol{\varphi} \cdot \sum_{a}\left(\boldsymbol{r}_{a} \times \dot{\boldsymbol{p}}_{a}+\boldsymbol{v}_{a} \times \boldsymbol{p}_{a}\right)=\delta \boldsymbol{\varphi} \cdot \frac{\mathrm{d}}{\mathrm{d} t} \sum_{a} \boldsymbol{r}_{a} \times \boldsymbol{p}_{a}=0 .$$
+将这些表达式代入转动时拉格朗日函数不变的条件$$\delta L=\sum_{a}\left(\frac{\partial L}{\partial\boldsymbol{r}_{a}}\cdot\delta\boldsymbol{r}_{a}+\frac{\partial L}{\partial\boldsymbol{v}_{a}}\cdot\delta\boldsymbol{v}_{a}\right)=0$$并做代换 $\frac{\partial L}{\partial \boldsymbol{v}_{a}} = \boldsymbol{p}_{a}, \quad \frac{\partial L}{\partial \boldsymbol{r}_{a}} = \dot{\boldsymbol{p}}_{a},$ 得$$\sum_{a}\left[\dot{\boldsymbol{p}}_{a}\cdot(\delta\boldsymbol{\varphi}\times\boldsymbol{r}_{a})+\boldsymbol{p}_{a}\cdot(\delta\boldsymbol{\varphi}\times\boldsymbol{v}_{a})\right]=0$$
+> [!tip]
+> $\frac{\partial L}{\partial \boldsymbol{r}_{a}} = \dot{\boldsymbol{p}}_{a}$ 在常规拉格朗日力学中来自欧拉－拉格朗日方程 $\frac{\mathrm{d}}{\mathrm{d}t}\frac{\partial L}{\partial\boldsymbol v_a}-\frac{\partial L}{\partial\boldsymbol r_a}=0$，
+> 
+> 标量三重积的恒等式（循环对称）：$\boldsymbol a\cdot(\boldsymbol b\times\boldsymbol c)=\boldsymbol b\cdot(\boldsymbol c\times\boldsymbol a)=\boldsymbol c\cdot(\boldsymbol a\times\boldsymbol b)$,
+> 
+> 
 
+置换因子的次序并将 $\delta \boldsymbol{\varphi}$ 移到求和号之外，$$\delta \boldsymbol{\varphi} \cdot \sum_{a}\left(\boldsymbol{r}_{a} \times \dot{\boldsymbol{p}}_{a}+\boldsymbol{v}_{a} \times \boldsymbol{p}_{a}\right)=\delta \boldsymbol{\varphi} \cdot \frac{\mathrm{d}}{\mathrm{d} t} \sum_{a} \boldsymbol{r}_{a} \times \boldsymbol{p}_{a}=0 .$$
 由 $\delta \boldsymbol{\varphi}$ 的任意性可得$$\frac{\mathrm{d}}{\mathrm{d}t}\sum_a \boldsymbol{r}_a \times \boldsymbol{p}_a = 0,$$即在封闭力学系统运动过程中矢量$$\boldsymbol{M}=\sum_{a} \boldsymbol{r}_{a} \times \boldsymbol{p}_{a} \tag{9.3}$$保持不变，这个物理量称为系统的 *角动量*。类似于线动量，这个物理量不依赖于质点之间是否有相互作用，它的可加性是显然的。
 
 可加的运动积分就这些，就是说，任何封闭系统总共有 7 个这样的运动积分：能量、动量的三个分量和角动量的三个分量。
 
 既然在角动量的定义中出现了质点的径矢，它的取值通常就与坐标原点的选取有关，假定两个坐标原点相差矢量 $\boldsymbol{a}$，同一个点对这两个坐标原点的径矢分别为 $\boldsymbol{r}_{a}$ 和 $\boldsymbol{r}'_{a}$，则有关系式 $\boldsymbol{r}_{a} = \boldsymbol{r}'_{a} + \boldsymbol{a}$，因此有 $$\boldsymbol{M}=\sum_{a} \boldsymbol{r}_{a} \times \boldsymbol{p}_{a}=\sum_{a} \boldsymbol{r}_{a}^{\prime} \times \boldsymbol{p}_{a}+\boldsymbol{a} \times \sum_{a} \boldsymbol{p}_{a}$$即$$\boldsymbol{M}=\boldsymbol{M}^{\prime}+\boldsymbol{a} \times \boldsymbol{P}\tag{9.4}$$由此可知，只有在系统整体静止（即 $\boldsymbol{P}=0$) 时，其角动量不依赖于坐标原点的选择，角动量值的这种不确定性不会影响到角动量守恒定律，因为封闭系统的动量也守恒。
 
-我们来推导相对不同惯性参考系 $K$ 和 $K'$ 的角动量之间的关系。设参考系 $K'$ 相对 $K$ 的速度为 $\boldsymbol{V}$，假定它们的坐标原点在某给定时刻重合，那么质点相对两个参考系的径矢相同，速度满足关系式： $\boldsymbol{v}_{a}=\boldsymbol{v}'_{a} + \boldsymbol{V}$。于是有$$\boldsymbol{M}=\sum_{a} m_{a}\boldsymbol{r}_{a}\times\boldsymbol{v}_{a}=\sum_{a} m_{a}\boldsymbol{r}_{a}\times\boldsymbol{v}_{a}^{\prime}+\sum_{a} m_{a}\boldsymbol{r}_{a}\times\boldsymbol{V}.$$右端第一项是相对参考系 $k'$ 的角动量 $\boldsymbol{M}'$，在第二项中利用质心径矢公式 (8.3)，可得$$\boldsymbol{M}=\boldsymbol{M}^{\prime}+\mu\boldsymbol{R}\times\boldsymbol{V}\tag{9.5}$$这个公式给出了相对不同参考系的角动量之间的变换关系，与能量关系式 (8.1)和动量关系式 (8.5) 类似。
+我们来推导相对不同惯性参考系 $K$ 和 $K'$ 的角动量之间的关系。设参考系 $K'$ 相对 $K$ 的速度为 $\boldsymbol{V}$，假定它们的坐标原点在某给定时刻重合，那么质点相对两个参考系的径矢相同，速度满足关系式： $\boldsymbol{v}_{a}=\boldsymbol{v}'_{a} + \boldsymbol{V}$。于是有$$\boldsymbol{M}=\sum_{a} m_{a}\boldsymbol{r}_{a}\times\boldsymbol{v}_{a}=\sum_{a} m_{a}\boldsymbol{r}_{a}\times\boldsymbol{v}_{a}^{\prime}+\sum_{a} m_{a}\boldsymbol{r}_{a}\times\boldsymbol{V}.$$右端第一项是相对参考系 $K'$ 的角动量 $\boldsymbol{M}'$，在第二项中利用质心径矢公式 (8.3)，可得$$\boldsymbol{M}=\boldsymbol{M}^{\prime}+\mu\boldsymbol{R}\times\boldsymbol{V}\tag{9.5}$$这个公式给出了相对不同参考系的角动量之间的变换关系，与能量关系式 (8.1)和动量关系式 (8.5) 类似。
 
-如果系统整体相对参考系 $K'$ 静止，则 $\boldsymbol{V}$ 是系统质心的速度，而 $\mu \boldsymbol{V}$ 是系统相对于参考系 $K$ 的总动量 $\boldsymbol{P}$，进而有$$\boldsymbol{M}=\boldsymbol{M}^{\prime}+\boldsymbol{R}\times\boldsymbol{P}.\tag{9.6}$$就是说，力学系统的角动量由其相对静止的参考系中的“内禀角动量”和整体运
+如果系统整体相对参考系 $K'$ 静止，则 $\boldsymbol{V}$ 是系统质心的速度，而 $\mu \boldsymbol{V}$ 是系统相对于参考系 $K$ 的总动量 $\boldsymbol{P}$，进而有$$\boldsymbol{M}=\boldsymbol{M}^{\prime}+\boldsymbol{R}\times\boldsymbol{P}.\tag{9.6}$$就是说，力学系统的角动量由其相对静止的参考系中的“内禀角动量”和整体运动的角动量 $\boldsymbol{R}\times\boldsymbol{P}$ 构成。
+
+虽然只有封闭系统的角动量（对任意坐标原点）三个分量都守恒，但是在一定限制下，这个守恒定律对于在外场中运动的系统也成立。从上面推导可以看出，角动量在外场的对称轴上投影总是守恒的，因为绕该轴转动时系统力学性质不变。当然，这时角动量计算是相对于位于该轴上的任意点（坐标原点）的。
+
+最重要的情况是中心对称外场，即势能仅仅依赖于到空间中某个特定点（中心）的距离，显然，在这种场内运动时，系统角动量在任意过中心的轴上投影都守恒，就是说，系统相对场中心的角动量 $\boldsymbol{M}$ 守恒。
+
+另一个例子是，在沿着 $z$ 轴的均匀场中角动量投影 $M_z$ 守恒，并且坐标原点可以任意选取。
+
+应该指出，角动量在任意轴（我们就取为 $z$ 轴）上的投影，都可以由对拉格朗日函数的微分求得：$$M_{z}=\sum_{a}\frac{\partial L}{\partial\dot{\varphi}_{a}}\tag{9.7}$$其中坐标 $\varphi$ 是绕 $z$ 轴的转角。根据前面给出的角动量守恒定律的证明过程，这个结论是显然的，也可以直接计算来验证。利用柱坐标 $r, \varphi, z$ 代入 $x_a =r_{a \cos}\varphi, y_{a}=\sin \varphi$，有：$$M_{z}=\sum_{a} m_{a}\left(x_{a} \dot{y}_{a}-y_{a} \dot{x}_{a}\right)=\sum_{a} m_{a} r_{a}^{2} \dot{\varphi}_{a}.\tag{9.8}$$另一方面，用这些坐标表示时，拉格朗日函数可以写成$$L = \frac{1}{2} \sum_{a} m_{a} \left( \dot{r}_{a}^{2} + r_{a}^{2} \dot{\varphi}_{a} + \dot{z}_{a}^{2} \right) - U$$将它代入 (9.7) 即可得 (9.8)。
+
+
+### 习题
+
+**习题 1**：用柱坐标 $r, \varphi, z$ 表示质点角动量的笛卡儿坐标分量以及角动量的大小。
+
+**答案：**$$\begin{align}
+M_{x}&=m\sin\varphi(r\dot{z}-z\dot{r})-m rz\dot{\varphi}\cos\varphi, \\[1.2ex]
+M_{y}&=m\cos\varphi(z\dot{r}-r\dot{z})-m rz\dot{\varphi}\sin\varphi, \\[1.2ex]
+M_{z}&=mr^{2}\dot{\varphi}, \\[1.2ex]
+M^{2}&=m^{2}r^{2}\dot{\varphi}^{2}\left(r^{2}+z^{2}\right)+m^{2}(r\dot{z}-z\dot{r})^{2}.
+\end{align}$$
+**习题 2**：用球坐标 $r, \theta, \varphi$ 中表示质点角动量的笛卡儿坐标分量以及角动量的大小。
+
+**答案：**
 
 
 
-
-动的角动量RXP 构成．
-虽然只有封闭系统的角动量（对任意坐标原点）三个分量都守恒，但是在一
-定限制下，这个守恒定律对千在外场中运动的系统也成立．从上面推导可以看
-出，角动量在外场的对称轴上投影总是守恒的，因为绕该轴转动时系统力学性质°
-不变．当然，这时角动量计算是相对于位千该轴上的任意点（坐标原点）的．
-最重要的情况是中心对称外场，即势能仅仅依赖千到空间中某个特定点（中
-心）的距离显然，在这种场内运动时，系统角动量在任意过中心的轴上投影都守
-恒就是说，系统相对场中心的角动量M 守恒
-另一个例子是，在沿着z 轴的均匀场中角动量投影Mz 守恒，并且坐标原点
-可以任意选取．
-应该指出，角动量在任意轴（我们就取为z 轴）上的投影，都可以由对拉格
-朗日函数的微分求得：
-M之＝ 2 3L,
-a · 甲a
-(9.7)
-其中坐标中是绕z 轴的转角．根据前面给出的角动量守恒定律的证明过程，这
-个结论是显然的，也可以直接计算来验证．利用柱坐标r, cp, z 代入Xa =
-raCOSCf!a,Ya= rasin 仰，有：
-矶＝ ~ma (xaYa —己） ＝ 2/ 礼（ 9.8)
-另一方面，用这些坐标表示时，拉格朗日函数可以写成
-L =了~m 八片＋ r 悼＋式）— U
-将它代入(9.7) 即可得(9. 8).
-习题
-习题1 用柱坐标r ，中， z 表示质点角动量的笛卡儿坐标分量以及角动量
-的大小．
-答案：
-Mx = msin 叭rz — z ;)— mrz 卢cos 中，
-My= mcos 中(z r - r 幻— mrz cpsincp,
-Mz = mr2 cp,
-M2= m2 产树（产＋ z 勹＋忙(r ; - z ;)2.
-习题2 用球坐标r,0 ，中表示质点角动量的笛卡儿坐标分量以及角动量
-的大小．、
-答案：
 § 9 角动量
 Mx =— mr2 (0 sincp +妇sin0cos0cos 中），
 My=m 产(e cosrp — <psin0cos0sin 沪，
