--- a/基础物理/第 4 章、二维和三维运动.md
+++ b/基础物理/第 4 章、二维和三维运动.md
@@ -625,13 +625,13 @@ a_{PA} = a_{PB}. \tag{4.6.3}$$换句话说，
 \end{align}$$
 **平均速度和瞬时速度：**  如果粒子在时间间隔 $\Delta t$ 内发生位移 $\Delta \vec{r}$，则其在该时间间隔内的平均速度 $\vec{v}_{\text{avg}}$ 为：$$
 \vec{v}_{\text{avg}} = \frac{\Delta \vec{r}}{\Delta t}. \tag{4.2.1}$$当 $\Delta t$ 缩小到 0 时，$\vec{v}_{\text{avg}}$ 达到一个极限，称为速度或瞬时速度 $\vec{v}$：$$
-\vec{v} = \frac{d \vec{r}}{dt}, \tag{4.2.3}$$用单位矢量表示为：$$
+\vec{v} = \frac{\mathrm{d} \vec{r}}{\mathrm{d}t}, \tag{4.2.3}$$用单位矢量表示为：$$
 \vec{v} = v_x \hat{i} + v_y \hat{j} + v_z \hat{k}, \tag{4.2.4}$$其中 $v_x = \frac{dx}{dt}$, $v_y = \frac{dy}{dt}$, $v_z = \frac{dz}{dt}$。粒子的瞬时速度 $\vec{v}$ 始终沿着粒子在其位置处路径的切线方向。
 
 **平均加速度和瞬时加速度：**   如果粒子的速度在时间间隔 $\Delta t$ 内从 $\vec{v}_1$ 变为 $\vec{v}_2$，则其在 $\Delta t$ 内的平均加速度为：$$
 \vec{a}_{\text{avg}} = \frac{\vec{v}_2 - \vec{v}_1}{\Delta t} = \frac{\Delta \vec{v}}{\Delta t}. \tag{4.3.1}$$当 $\Delta t$ 缩小到 0 时，$\vec{a}_{\text{avg}}$ 达到一个极限，称为加速度或瞬时加速度 $\vec{a}$：$$
-\vec{a} = \frac{d \vec{v}}{dt}. \tag{4.3.2}$$用单位矢量表示为：$$
-\vec{a} = a_x \hat{i} + a_y \hat{j} + a_z \hat{k}, \tag{4.3.3}$$其中 $a_x = \frac{dv_x}{dt}$, $a_y = \frac{dv_y}{dt}$, $a_z = \frac{dv_z}{dt}$。
+\vec{a} = \frac{\mathrm{d} \vec{v}}{\mathrm{d}t}. \tag{4.3.2}$$用单位矢量表示为：$$
+\vec{a} = a_x \hat{i} + a_y \hat{j} + a_z \hat{k}, \tag{4.3.3}$$其中 $a_x = \frac{\mathrm{d}v_x}{\mathrm{d}t}$, $a_y = \frac{\mathrm{d}v_y}{\mathrm{d}t}$, $a_z = \frac{\mathrm{d}v_z}{\mathrm{d}t}$。
 
 **抛体运动：**   抛体运动是指以初速度 $\vec{v}_0$ 发射的粒子的运动。在飞行过程中，粒子的水平加速度为零，垂直加速度为自由落体加速度 $-g$。（向上为正方向。）如果 $\vec{v}_0$ 表示为大小（速度 $v_0$）和角度 $\theta_0$（从水平线测量），则粒子在水平 $x$ 轴和垂直 $y$ 轴上的运动方程为：$$\begin{align}
 x - x_0 &= (v_0 \cos \theta_0) t, \tag{4.4.3} \\
